/* Derived terms */ [[advertorial]] <advertisement#23537180>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -34,6 +34,7 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 {{rel-top|terms derived from advertisement}}
 * [[ad]]
 * [[advert]]
+* [[advertorial]]
 {{rel-mid}}
 * [[classified advertisement]]
 * [[pop-up advertisement]]
