--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -97,36 +97,34 @@
 {{trans-bottom}}
 
 {{checktrans-top}}
-* Albanian: [[lulelakër]]
-* Serbo-Croatian: {{t|sh|karfiol|m}}
-* Bulgarian: {{t|bg|карфиол|m|tr=karfiol}}
-* [[Cornish]]: [[cawlvlejen]]
-* Serbo-Croatian: {{t|sh|karfiol|m}}
-* Esperanto: {{t+|eo|florbrasiko}}
-* [[West Frisian]]: [[blomkoal]]
-* Hebrew: [[כרובית]] (kruvít) {{g|f}}
-* Hindi: [[गोभी]] (gobhī)
-* Indonesian: [[bungkul]]; [[kubis]] [[bunga]]
-* Italian: {{t+|it|cavolfiore|m}}
-* Latin: {{t+|la|brassica|f}}
-* Maltese: [[pastarda]] {{g|f}}
-* [[Neapolitan]]: [[cavelesciore]]
-* Norwegian: {{t|no|blomkål}}
+* {{ttbc|sq}}: [[lulelakër]]
+* {{ttbc|bg}}: {{t|bg|карфиол|m|tr=karfiol}}
+* {{ttbc|kw}}: [[cawlvlejen]]
+* {{ttbc|eo}}: {{t+|eo|florbrasiko}}
+* {{ttbc|fy}}: [[blomkoal]]
+* {{ttbc|he}}: [[כרובית]] (kruvít) {{g|f}}
+* {{ttbc|hi}}: [[गोभी]] (gobhī)
+* {{ttbc|id}}: [[bungkul]]; [[kubis]] [[bunga]]
+* {{ttbc|it}}: {{t+|it|cavolfiore|m}}
+* {{ttbc|la}}: {{t+|la|brassica|f}}
+* {{ttbc|mt}}: [[pastarda]] {{g|f}}
+* {{ttbc|nap}}: [[cavelesciore]]
+* {{ttbc|no}}: {{t|no|blomkål}}
 {{trans-mid}}
-* Persian: {{t|fa|گل کلم|tr=gol-e kalam}}
-* Portuguese: [[couve-flor]] {{g|f}}
-* Romanian: [[conopidă]] {{g|f}}
-* Serbo-Croatian:
+* {{ttbc|fa}}: {{t|fa|گل کلم|tr=gol-e kalam}}
+* {{ttbc|pt}}: [[couve-flor]] {{g|f}}
+* {{ttbc|ro}}: [[conopidă]] {{g|f}}
+* {{ttbc|sh}}:
 *: Cyrillic: [[карфиол]] {{g|m}}
 *: Roman: [[karfiol]] {{g|m}}
-* Slovak: {{t|sk|karfiol|m}}
-* Slovene: [[cvetača]] {{g|f}}
-* Spanish: [[coliflor]] {{g|f}}, [[pella]] {{g|f}} {{qualifier|Northern Spain|specifically Navarra|Spanish Basque Country|Aragon|and La Rioja}}
-* Thai: {{Thai|[[ดอกกะหล่ำ]]}} (dòk gà-làm)
-* Turkish: [[karnabahar]]
-* Urdu: {{t|ur|گوبی|tr=gobī}}, {{t|ur|گوبھی|tr=gobhī}}
-* Vietnamese: {{t|vi|hoa lơ}}, {{t|vi|hoa lơ trắng}}, {{t|vi|bông cải trắng}}
-* [[Zulu]]: [[ukholifulawa]]
+* {{ttbc|sk}}: {{t|sk|karfiol|m}}
+* {{ttbc|sl}}: [[cvetača]] {{g|f}}
+* {{ttbc|es}}: [[pella]] {{g|f}} {{qualifier|Northern Spain|specifically Navarra|Spanish Basque Country|Aragon|and La Rioja}}
+* {{ttbc|th}}: [[ดอกกะหล่ำ]] (dòk gà-làm)
+* {{ttbc|tr}}: [[karnabahar]]
+* {{ttbc|ur}}: {{t|ur|گوبی|tr=gobī}}, {{t|ur|گوبھی|tr=gobhī}}
+* {{ttbc|vi}}: {{t|vi|hoa lơ}}, {{t|vi|hoa lơ trắng}}, {{t|vi|bông cải trắng}}
+* {{ttbc|zu}}: [[ukholifulawa]]
 {{trans-bottom}}
 
 [[Category:en:Plants]]
