--- a/en/1/1 Kings.801703.wikitext
+++ b/en/1/1 Kings.801703.wikitext
@@ -12,7 +12,7 @@
 
 ====Translations====
 {{trans-top|book of the Bible}}
-* Afrikaans: {{t|af|1 Konings}}
+* Afrikaans: {{t|af|1 Konings}}, {{t|af|I Konings}}
 * French: {{t|fr|1 Rois}}
 * Greek: {{t|el|Α' Βασιλειών||tr=A' Vasileión}}, {{t|el|Βασιλείς Α'||tr=Vasileís A'}}
 {{trans-mid}}
