t+af:[[2 Konings]] t+af:[[II Konings]] ([[WT:EDIT|Assisted]]) <2 Kings#23556236>

--- a/en/2/2 Kings.801706.wikitext
+++ b/en/2/2 Kings.801706.wikitext
@@ -12,6 +12,7 @@
 
 ====Translations====
 {{trans-top|book of the Bible}}
+* Afrikaans: {{t|af|2 Konings}}, {{t|af|II Konings}}
 * French: {{t|fr|2 Rois}}
 * German: {{t|de|2 Könige}}
 {{trans-mid}}
