--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -55,6 +55,7 @@ From {{etyl|enm|en}} {{term|thaugh|lang=enm}}, {{term|thagh||lang=enm}}, from {{
 * Scottish Gaelic: {{t|gd|ge-tà}}
 * Spanish: {{t|es|no obstante}}
 * Swahili: [[ijapokuwa]], [[hata hivyo]]
+* Ukrainian: {{t|uk|тим не менш|tr=tym ne mensh|sc=Cyrl}}
 * Volapük: [[do#Volapük|do]]
 {{trans-bottom}}
 
