--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -40,6 +40,8 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 #: {{usex|lang=en|that's the '''thing''': we don't know where he went;&nbsp; the '''thing''' is, I don't have any money}}
 # {{non-gloss definition|Used after a noun to refer dismissively to the situation surrounding the noun's referent.|lang=en}}
 #: {{usex|lang=en|Oh yeah, I'm supposed to promote that vision '''thing'''.}}
+#* '''1914''', Eugene Gladstone O'Neill, ''[http://www.eoneill.com/texts/movie/contents.htm The Movie Man]'' [playscript]:
+#*: ''Don’t forget to have Gomez postpone that shooting '''thing'''.'' {{qualifier|in reference to the execution of Fernandez}}
 # {{context|chiefly|historical|lang=en}} A public [[assembly]] or [[judicial]] [[council]] in a [[Germanic]] country.
 #* '''1974''', Jón Jóhannesson, ''A History of the Old Icelandic Commonwealth: Íslendinga Saga'', translated by Haraldur Bessason, page 46:
 #*: In accordance with Old Germanic custom men came to the '''''thing''''' fully armed, [...]
@@ -51,8 +53,6 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 ====Quotations====
 * '''1611''' — {{w|King James Version of the Bible}}, ''[[s:Bible (King James)/Luke|Luke]] 1:1''
 *: Forasmuch as many have taken in hand to set forth in order a declaration of those '''things''' which are most surely believed among us...
-* '''1914''', O'Neill, Eugene Gladstone, ''[http://www.eoneill.com/texts/movie/contents.htm The Movie Man]'' [playscript].
-*: ''Don’t forget to have Gomez postpone that shooting '''thing'''.'' (in reference to the execution of Fernandez).
 
 ====Synonyms====
 * [[stuff]] ([[uncountable]] equivalent)
