/* English */ <she-goat#23588993>

--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -1,9 +1,8 @@
 ==English==
-
 ===Noun===
 {{en-noun}}
 
-# A female [[goat]].
+# A female [[goat]]; a [[ewe]]; a [[nanny]]; a [[doe]]; a [[doeling]].
 
 ====Synonyms====
 * {{sense|female goat}} [[nanny goat]]
@@ -27,6 +26,7 @@
 * [[hostage#English|hostage]]
 
 [[Category:en:Goats]]
+[[Category:en:Female animals]]
 
 [[et:she-goat]]
 [[fr:she-goat]]
