/* Related terms */ ====Derived terms==== * {{l/en|staff sling}} <staff#23633678>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -36,6 +36,9 @@
 * {{sense|employees}} [[personnel]]
 * See also [[Wikisaurus:stick]]
 
+====Derived terms====
+* {{l/en|staff sling}}
+
 ====Related terms====
 * [[member of staff]]
 * [[quarterstaff]]
