/* Derived terms */ [[high island]], [[low island]] <island#23633784>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -41,6 +41,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm|en}} {{term|iland|lang=enm}
 * [[desert island]]
 * [[floating island]]
 * [[heat island]]
+* [[high island]]
 * [[interisland]]
 * [[islander]]
 * [[island dispenser]]
@@ -52,6 +53,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm|en}} {{term|iland|lang=enm}
 * [[island universe]]
 * [[islandwide]]
 * [[islandy]]
+* [[low island]]
 * [[no man is an island]]
 * [[safety island]]
 * [[security island]]
