--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -8,7 +8,7 @@
 From {{etyl|dum|nl}} {{term|wasschen|lang=dum}}, from {{etyl|odt|nl}} {{term|waskan|lang=odt}}, from {{etyl|gem-pro|nl}} {{term/t|gem-pro|*waskaną||to wash, make wet}}, ultimately from {{etyl|ine-pro|nl}} {{term/t|ine-pro|*wod-||water; wet}}. Cognate with {{etyl|nds|-}} {{term|waschen||to wash|lang=nds}}, {{etyl|de|-}} {{term|waschen||to wash|lang=de}}, {{etyl|fy|-}} {{term|waskje||to wash|lang=fy}}, {{etyl|en|-}} {{term|wash|lang=en}}, {{etyl|da|-}} {{term|vaske||to wash|lang=da}}. More at {{l|en|wash}}.
 
 ====Verb====
-{{nl-verb}}
+{{nl-verb|waste|gewassen}}
 
 # {{context|transitive|lang=nl}} To [[wash]] or [[clean]] (something or oneself)
 
@@ -28,7 +28,7 @@ From {{etyl|dum|nl}} {{term|wasschen|lang=dum}}, from {{etyl|odt|nl}} {{term|was
 From {{etyl|dum|nl}} {{term|wassen|lang=dum}}, from {{etyl|odt|nl}} {{term|wahsan|lang=odt}}, {{term|wassan|lang=odt}}, from {{etyl|gem-pro|nl}} {{term/t|gem-pro|*wahsijaną||to increase}}, from {{etyl|ine-pro|nl}} {{term/t|ine-pro|*h₂weg-}}, {{term/t|ine-pro|*awek-}}, {{term/t|ine-pro|*aweg-||to increase}}. Cognate with {{etyl|nds|-}} {{term|wassen|lang=nds}}, {{etyl|de|-}} {{term|wachsen||to grow, expand, increase|lang=de}}, {{etyl|fy|-}} {{term|waakse||to grow, accrue|lang=fy}}, {{etyl|en|-}} {{term|wax||to grow, increase|lang=en}}, {{etyl|da|-}} {{term|vokse|lang=da}}. More at {{l|en|wax}}.
 
 ====Verb====
-{{nl-verb}}
+{{nl-verb|wies|gewassen}}
 
 # {{context|intransitive|archaic|lang=nl}} To [[grow]]; to [[rise]]; to [[increase]]; to [[become]] [[high]]er and/or [[big]]ger; to [[wax]].
 #: ''De '''wassende''' maan ("the waxing moon")''
@@ -54,7 +54,7 @@ From {{etyl|dum|nl}} {{term|wassen|lang=dum}}, from {{etyl|odt|nl}} {{term|wahsa
 {{nl-decl-adj||-|pred=-|part=-}}
 
 ====Verb====
-{{nl-verb}}
+{{nl-verb|waste|gewast}}
 
 # {{context|transitive|lang=nl}} To [[rub]] [[wax]] on.
 
