--- a/en/1/1 Kings.801703.wikitext
+++ b/en/1/1 Kings.801703.wikitext
@@ -16,8 +16,8 @@
 * Afrikaans: {{t|af|1 Konings}}, {{t|af|I Konings}}
 * French: {{t|fr|1 Rois}}
 {{trans-mid}}
-* Greek: {{t|el|Α' Βασιλειών||tr=A' Vasileión}}, {{t|el|Βασιλείς Α'||tr=Vasileís A'}}
-* Japanese: {{t|ja|列王記上|tr=retsuō kijō|sc=Jpan}}
+* Greek: {{t|el|Α' Βασιλειών}}, {{t|el|Βασιλείς Α'}}
+* Japanese: {{t|ja|列王記上|tr=retsuō kijō}}
 {{trans-bottom}}
 
 [[Category:English terms spelled with 1]]
