--- a/en/1/1 Samuel.801687.wikitext
+++ b/en/1/1 Samuel.801687.wikitext
@@ -14,10 +14,10 @@
 ====Translations====
 {{trans-top|book of the Bible}}
 * German: {{t|de|1 Samuel}}
-* Greek: {{t|el|Α' Σαμουήλ||tr=A' Samouíl|sc=Grek}}
+* Greek: {{t|el|Α' Σαμουήλ}}
 {{trans-mid}}
 * Irish: {{t|ga|Céad Leabhar Shamúéil|m}}, {{t|ga|1 Samúéil|m}}
-* Japanese: {{t|ja|サムエル記上|tr=samueru kijō|sc=Jpan}}
+* Japanese: {{t|ja|サムエル記上|tr=samueru kijō}}
 {{trans-bottom}}
 
 [[Category:English terms spelled with 1]]
