--- a/en/4/4 Kings.801718.wikitext
+++ b/en/4/4 Kings.801718.wikitext
@@ -12,7 +12,7 @@
 
 ====Translations====
 {{trans-top|book of the Bible}}
-*Greek: {{t|el|Δ' Βασιλειών||tr=D' Vasileión}}
+*Greek: {{t|el|Δ' Βασιλειών}}
 {{trans-mid}}
 {{trans-bottom}}
 
