--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -25,6 +25,8 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 # {{context|intransitive|lang=en}} To produce an [[air]] [[current]].
 #* '''1606''', [[w:William Shakespeare|William Shakespeare]], ''King Lear'', act 3, sc. 2:
 #*: "'''Blow''', winds, and crack your cheeks! rage! '''blow'''!"
+#* Walton
+#*: Hark how it rains and '''blows'''!
 # {{context|transitive|lang=en}} To propel by an [[air]] [[current]].
 #: '''''Blow''' the dust off that book and open it up.''
 # {{context|intransitive|lang=en}} To be propelled by an [[air]] [[current]].
@@ -38,6 +40,8 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 # {{context|transitive|lang=en}} To cause to make sound by blowing, as a musical instrument.
 # {{context|intransitive|lang=en}} To make a sound as the result of being blown.
 #: ''In the harbor, the ships' horns '''blew'''.''
+#* Milton
+#*: There let the pealing organ '''blow'''.
 # {{context|intransitive|of a [[cetacean]]|lang=en}} To [[exhale]] [[visibly]] through the [[spout]] the [[seawater]] which it has taken in while [[feeding]].
 #: ''There's nothing more thrilling to the whale watcher than to see a whale surface and '''blow'''.''
 #: ''There she '''blows'''! (i.e. "I see a whale spouting!")''
@@ -78,9 +82,15 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 # {{cx|obsolete|lang=en}} To inflate, as with pride; to puff up.
 #* Shakespeare
 #*: Look how imagination '''blows''' him.
-# To put out of breath; to cause to blow from fatigue.
+# {{cx|intransitive|lang=en}} To breathe hard or quick; to pant; to puff.
+#* Shakespeare
+#*: Here is Mistress Page at the door, sweating and '''blowing'''.
+# {{cx|transitive|lang=en}} To put out of breath; to cause to blow from fatigue.
 #: ''to '''blow''' a horse''
 #: {{rfquotek|Sir Walter Scott}}
+# {{cx|obsolete|lang=en}} To talk loudly; to boast; to storm.
+#* Bartlett
+#*: You '''blow''' behind my back, but dare not say anything to my face.
 
 =====Derived terms=====
 {{rel-top|Terms derived from ''blow'' (verb)}}
