--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -29,6 +29,7 @@ From {{etyl|enm|en}} {{term/t|enm|plege}}, from {{etyl|xno|en}} {{term/t|fro|ple
 *: Cantonese: {{t|yue|誓|tr=sai6|sc=Hani}}
 *: Mandarin: {{t+|cmn|發誓|sc=Hani}}, {{t+|cmn|发誓|tr=fāshì|sc=Hani}}, {{t+|cmn|保證|sc=Hani}}, {{t+|cmn|保证|tr=bǎozhèng|sc=Hani}}
 * Danish:
+* Dutch: {{t|nl|plechtig beloven}}
 * Finnish: {{t+|fi|luvata}}, {{t+|fi|sitoutua}}
 * French: {{t+|fr|promettre}}
 * German: {{t|de|zusichern}}, {{t+|de|versprechen}}
