/* Translations */ FR Cep*e*ndant. My, my, my! <then#23675136>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -257,7 +257,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Dutch: {{t+|nl|trouwens}}
 * Esperanto: {{t|eo|tamen}}
 * Finnish: {{t+|fi|toisaalta}}
-* French: {{t|fr|cepandant}}, {{t+|fr|en même temps}}
+* French: {{t|fr|cependant}}, {{t+|fr|en même temps}}
 * {{trreq|ka}}
 * Hungarian: {{t+|hu|ugyanakkor}}, {{t+|hu|viszont}}
 * Italian: {{t|it|allo stesso tempo}}
