t+mi:[[pateri]] ([[WT:EDIT|Assisted]]) <badger#23675641>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -88,6 +88,7 @@ From {{etyl|enm|en}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|b
 * Lower Sorbian: {{t|dsb|jazw}}, {{t|dsb|šwińc}}
 * Macedonian: {{t|mk|јазовец|m|tr=jázovec}}
 * Manx: {{t|gv|broc}}
+* Maori: {{t|mi|pateri}}
 * Mazanderani: {{t|mzn|گورشکو|tr=gureško|sc=ps-Arab}}
 * Mongolian: {{t+|mn|дорго|tr=dorgo|sc=Cyrl}}
 * Navajo: {{t|nv|nahashchʼidí}}
