--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -42,7 +42,7 @@ From {{etyl|goh|de}} {{term|bitten|lang=goh}}, from {{etyl|gem-pro|de}} {{term/t
 ===Verb===
 {{de-verb-strong|class=5|bittet|bat|gebeten|past subjunctive=bäte}}
 
-# {{context|transitive|or|intransitive|lang=de}} To [[ask]]; to [[beg]]; to [[plead]]; to [[request]].
+# {{context|transitive|or|intransitive|lang=de}} to [[ask]], to [[beg]], to [[plead]], to [[request]]
 
 ====Conjugation====
 {{de-conj-strong|bitt|bat|gebeten|h|e||bät|a}}
