--- a/en/p/prank call.776672.wikitext
+++ b/en/p/prank call.776672.wikitext
@@ -11,6 +11,7 @@
 {{trans-top|practical joke made using the telephone}}
 * Portuguese: {{t+|pt|trote|m}}
 {{trans-mid}}
+* Swedish: {{t|sv|busringning|c}}
 {{trans-bottom}}
 
 [[simple:prank call]]
