t+ru:[[позитроний]] ([[WT:EDIT|Assisted]]) <positronium#23681051>

--- a/en/p/positronium.746650.wikitext
+++ b/en/p/positronium.746650.wikitext
@@ -12,6 +12,7 @@
 * [[Ido]]: {{t|io|positronio}}
 * Italian: {{t|it|positronio|m}}
 {{trans-mid}}
+* Russian: {{t+|ru|позитроний|m|sc=Cyrl}}
 * Spanish: {{t+|es|positronio|m}}
 {{trans-bottom}}
 
