/* Alternative forms */ <multicolor#23684646>

--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -2,6 +2,8 @@
 
 ===Alternative forms===
 * [[multicolour]] {{qualifier|Commonwealth}}
+* [[multicolored]] {{qualifier|US}}
+* [[multicoloured]] {{qualifier|Commonwealth}}
 
 ===Etymology===
 From {{etyl|la|en}} {{term|multicolor|lang=la}}; see below.
