--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -19,17 +19,22 @@ From {{etyl|la|en}} {{term|multicolor|lang=la}}; see below.
 ====Translations====
 {{trans-top|having many colours}}
 * Bulgarian: {{t+|bg|многоцветен|m}}
+* Danish: {{t|da|flerfarvet}}
 * Dutch: {{t+|nl|bont}}, {{t+|nl|bonte}}, {{t|nl|veelkleurig}}, {{t|nl|veelkleurige}}, [[meerkleurig]]
 * Esperanto: {{t|eo|multkolora}}
 * Finnish: {{t|fi|monivärinen}}
 * French: {{t+|fr|multicolore}}
 * German: {{t+|de|bunt}}, {{t|de|vielfarbig}}, [[mehrfarbig]]
-{{trans-mid}}
 * Italian: {{t+|it|multicolore}}
+{{trans-mid}}
 * Latin: {{t|la|multicolor}}
 * Malay: {{t|ms|pancawarna}}
+* Norwegian:
+*: Bokmål: {{t|no|flerfarget}}, {{t|no|flerfarga}}
+*: Nynorsk: {{t|nn|fleirfarga}}
 * Portuguese: [[multicor]]
 * Romanian: {{t+|ro|multicolor}}
+* Swedish: {{t+|sv|flerfärgad}}, {{t+|sv|mångfärgad}}
 {{trans-bottom}}
 
 ----
