/* Preposition */ another cite from further south <again#23685404>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -198,6 +198,8 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 # {{context|obsolete or dialectal|lang=en}} [[against|Against]].
 #* '''1485''', Thomas Malory, ''Le Morte Darthur'', Book X:
 #*: And here begynneth the treson of Kynge Marke that he ordayned '''agayne''' Sir Trystram.
+#* '''1924''', J H Wilkinson, ''Leeds Dialect Glossary and Lore'', page 60
+#*: Ah'd like to wahrn (warn) thi '''agaan''' 'evvin owt to dew wi' that chap.
 #* '''2003''', Glasgow Sunday Herald, page 16, column 2:
 #*: You may think you are all on the same side, '''agin''' the government.
 
