--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -10,7 +10,7 @@
 * {{audio|En-us-cauliflower.ogg|Audio (US cot-caught merged)}}
 
 ===Etymology===
-From modern Latin ''cauli-flōra'' or French ''chou-flori'' or ultimately from {{etyl|pro|en}} {{term|caulet-flòri||cauliflower|lang=pro}}, from {{term|caulet||cabbage|lang=pro}} and {{term|flòri||flowered|lang=pro}}.
+From modern Latin ''cauli-flōra'' or ultimately from {{etyl|pro|en}} {{term|caulet-flòri||cauliflower|lang=pro}}, from {{term|caulet||cabbage|lang=pro}} and {{term|flòri||flowered|lang=pro}}.
 
 ===Noun===
 {{en-noun}}
