t+es:[[apestar]] ([[WT:EDIT|Assisted]]) <blow#23687362>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -311,6 +311,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * French: [[être]] {{t+|fr|nul|m}}, [[faire]] {{t+|fr|chier}}
 {{trans-mid}}
 * Korean: {{qualifier|interjection}} {{t+|ko|제기랄|tr=jegiral|sc=Kore}}
+* Spanish: {{t|es|apestar}}
 * Swahili: {{t+|sw|panchi}}
 * Vietnamese: {{t+|vi|tẽn tò}}, {{t+|vi|tẽn}}, {{t+|vi|thẹn thò}}, {{t+|vi|thẹn}}
 {{trans-bottom}}
