--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -22,7 +22,9 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 ====Verb====
 {{en-verb}}
 
-# {{context|archaic|transitive|lang=en}} To [[listen]] to (something or someone). {{defdate|from 15th c.}}
+# {{context|archaic|transitive|lang=en}} To [[listen]] to (something or someone); to pay attention to; regard; heed. {{defdate|from 15th c.}}
+#* Sir Philip Sidney
+#*: The diligent pilot in a dangerous tempest doth not '''attend''' the unskilful words of the passenger.
 # {{context|archaic|intransitive|lang=en}} To [[listen]] ({{term|to}}, {{term|unto}}). {{defdate|from 15th c.}}
 # {{senseid|en|to turn one's consideration to, deal with}}{{context|intransitive|lang=en}} To turn one's [[consideration]] ({{term|to}}); to [[deal]] with (a task, problem, concern etc.), to look after. {{defdate|from 15th c.}}
 #: {{usex|lang=en|Secretaries '''attend''' to correspondence.}}
@@ -31,6 +33,12 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 |passage=Edward Churchill still '''attended''' to his work in a hopeless mechanical manner like a sleep-walker who walks safely on a well-known round. But his Roman collar galled him, his cossack stifled him, his biretta was as uncomfortable as a merry-andrew's cap and bells.}}
 # {{context|transitive|lang=en}} To [[wait upon]] as a [[servant]] etc.; to accompany to assist (someone). {{defdate|from 15th c.}}
 #: {{usex|lang=en|Valets '''attend''' to their employer's wardrobe.}}
+#* Spenser
+#*: The fifth had charge sick persons to '''attend'''.
+#* Shakespeare
+#*: '''Attends''' the emperor in his royal court.
+#* Macaulay
+#*: With a sore heart and a gloomy brow, he prepared to '''attend''' William thither.
 # {{senseid|en|to be present at}}{{context|transitive|lang=en}} To be [[present]] at (an event or place) in order to take part in some action or proceedings. {{defdate|from 17th c.}}
 #: {{usex|lang=en|Children must '''attend''' primary school.}}
 #* {{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
