t+ga:[[2 Ríthe]] t+ga:[[Dara Leabhar na Ríthe]] ([[WT:EDIT|Assisted]]) <2 Kings#23714623>

--- a/en/2/2 Kings.801706.wikitext
+++ b/en/2/2 Kings.801706.wikitext
@@ -17,6 +17,7 @@
 * German: {{t|de|2 Könige}}
 {{trans-mid}}
 * Greek: {{t|el|Β' Βασιλειών}}, {{t|el|Βασιλείς Β'}}
+* Irish: {{t|ga|2 Ríthe|m}}, {{t|ga|Dara Leabhar na Ríthe|m}}
 * Japanese: {{t|ja|列王記下|tr=retsuō kige|sc=Jpan}}
 {{trans-bottom}}
 
