/* Derived terms */ <mill#23730810>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -57,13 +57,17 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * [[millhouse]]
 * [[milling]]
 * [[millstone]]
+* [[mill wheel]]
+* [[millwheel]]
 * [[paper mill]]
 {{der-mid}}
 * [[pulp mill]]
+* [[rolling mill]]
 * [[run-of-the-mill]]
 * [[rumor mill]], [[rumour mill]]
 * [[steel mill]]
 * [[trouble at t' mill]]
+* [[watermill]]
 * [[windmill]]
 {{der-bottom}}
 
