/* Derived terms */ <mill#23732354>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -56,9 +56,9 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * [[miller]]
 * [[millhouse]]
 * [[milling]]
+* [[mill race]], [[millrace]]
 * [[millstone]]
-* [[mill wheel]]
-* [[millwheel]]
+* [[mill wheel]], [[millwheel]]
 * [[paper mill]]
 {{der-mid}}
 * [[pulp mill]]
