t+id:[[hal]] ([[WT:EDIT|Assisted]]) <thing#23736916>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -119,7 +119,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Hindi: {{t|hi|वस्तू|m|tr=vastū|sc=Deva}}, {{t+|hi|चीज़|f|tr=cīz|sc=Deva}}
 * Hungarian: {{t+|hu|dolog}}
 * Ido: {{t+|io|kozo}}
-* Indonesian: {{t+|id|benda}}, {{t+|id|barang}}, {{t+|id|makhluk}}
+* Indonesian: {{t+|id|benda}}, {{t+|id|barang}}, {{t+|id|makhluk}}, {{t+|id|hal}}
 * Interlingua: {{t|ia|cosa}}
 * Irish: {{t|ga|rud|m}}, {{t|ga|ní|m}}
 * Italian: {{t+|it|cosa|f}}
