--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -187,7 +187,7 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Korean: {{t|ko|ㅆ지|tr=-tji|sc=Kore}}, {{t|ko|ㅆ죠|tr=-tjyo|sc=Kore}}
 * Portuguese: {{t+|pt|mesmo}}
 * Russian: {{t|ru|говорите|tr=govorít'e}}
-* {{trreq|es}}
+* Spanish: {{t+|es|de nuevo}}
 * Swedish: {{t+|sv|igen}}
 * Tagalog: {{t+|tl|ano}}?, ano {{t|tl|ulit}}? ano {{t+|tl|po}}? (formal)
 {{trans-bottom}}
