--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -190,6 +190,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Venetian: {{t|vec|cunicio|m}}
 * Vietnamese: {{t+|vi|thỏ}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|krolig}}, {{qualifier|♂}} {{t|vo|hikrolig}}, {{qualifier|♀}} {{t|vo|jikrolig}}, {{qualifier|♂♀ offspring}} {{t|vo|kroligül}}, {{qualifier|♂ offspring}} {{t|vo|hikroligül}}, {{qualifier|♀ offspring}} {{t|vo|jikroligül}}, {{qualifier|diminutive ♂♀}} {{t|vo|kroligil}}, {{qualifier|diminutive ♂}} {{t|vo|hikroligil}}, {{qualifier|diminutive ♀}} {{t|vo|jikroligil}}
+* Votic: {{t-|vot|jänez}}
 * {{trreq|wbp}}
 * Welsh: {{t+|cy|cwningen}}
 * West Frisian: {{t|fy|knyn}}
