--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -7,7 +7,7 @@
 ===Adjective===
 {{gl-adj}}
 
-# [[American]] {{gloss|of the United States}}
+# [[US American]]
 
 ====Synonyms====
 * {{l|gl|americano}}
