--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -7,7 +7,7 @@
 ===Adjective===
 {{gl-adj}}
 
-# [[US American]]
+# [[American]] {{gloss|of the United States}}
 
 ====Synonyms====
 * {{l|gl|americano}}
@@ -16,7 +16,7 @@
 ===Noun===
 {{gl-noun|mf}}
 
-# [[American]] {{gloss|someone from the United States}}
+# [[US American]]
 
 ====Synonyms====
 * {{l|gl|americano}}
