--- a/en/b/blamestorms.719918.wikitext
+++ b/en/b/blamestorms.719918.wikitext
@@ -6,11 +6,9 @@
 # {{plural of|blamestorm}}
 
 ===Verb===
-'''blamestorms'''
+{{head|en}}
 
 # {{en-third-person singular of|blamestorm}}
-
-[[Category:English plurals]][[Category:English plurals using obsolete wikisyntax]]
 
 [[ar:blamestorms]]
 [[de:blamestorms]]
