--- a/en/n/nebbiolo.745861.wikitext
+++ b/en/n/nebbiolo.745861.wikitext
@@ -3,6 +3,9 @@
 [[File:Close up of Nebbiolo cluster in Italy.jpg|thumb|'''Nebbiolo''' (uva).]]
 [[File:Cascin Adelaide Barolo & decanter.jpg|thumb|'''Nebbiolo''' (vino).]]
 
+===Etymology===
+From {{suffix|nebbia|t1=fog|olo|lang=it}}, because the grapes seem to be covered with fog.
+
 ===Pronunciation===
 * {{IPA|/nebˈbjɔlo/|lang=it}}
 
