--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -47,8 +47,8 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Hebrew: {{t+|he|במבוק|m|tr=bambuq}}
 * Hindi: {{t|hi|बांस|tr=bāns|sc=Deva}}
 * Hungarian: {{t+|hu|bambusz}}
-{{trans-mid}}
 * Indonesian: {{t+|id|buluh}}, {{t+|id|bambu}}, {{t+|id|aur}}
+{{trans-mid}}
 * Italian: {{t+|it|bambù|m}}
 * Japanese: {{t+|ja|竹|tr=[[たけ]], take|sc=Jpan}}
 * Kannada: {{t+|kn|ಬಿದಿರು|tr=bidiru|sc=Knda}}
@@ -68,6 +68,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Slovak: {{t|sk|bambus|m}}
 * Slovene: {{t+|sl|bambus|m}}
 * Spanish: {{t|es|bambú|m}}
+* Swedish: {{t+|sv|bambu|c}}
 * Sundanese: {{t+|su|awi}}
 * Tagalog: [[kawayan]]
 * Thai: {{t|th|ไผ่|tr=pài|sc=Thai}}
@@ -89,8 +90,8 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Hawaiian: {{t|haw|ʻohe}}
 * Hebrew: {{t+|he|במבוק|m|tr=bambuq}}
 * Italian: {{t+|it|bambù|m}}
-{{trans-mid}}
 * Japanese: {{t+|ja|竹|tr=[[たけ]], take|sc=Jpan}}, {{t|ja|竹材|tr=たけざい, takezai|sc=Jpan}}
+{{trans-mid}}
 * Macedonian: {{t|mk|бамбус|m|tr=bámbus}}
 * Malay:
 *: Rumi: {{t+|ms|buluh}}, {{t+|ms|bambu}}, {{t|ms|aur}}
@@ -99,6 +100,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Russian: {{t+|ru|бамбук|m|tr=bambúk|sc=Cyrl}}, {{t|ru|бамбуковая трость|f|tr=bambúkovaja trostʹ|sc=Cyrl}}
 * Slovene: {{t+|sl|bambus|m}}
 * Spanish: {{t|es|bambú|m}}
+* Swedish: {{t+|sv|bambu|c}}
 * Tagalog: [[kawayan]]
 * Thai: {{t+|th|ไม้ไผ่|tr=máai pài|sc=Thai}}
 * Tok Pisin: {{t|tpi|mambu}}
