--- a/en/p/palet.803129.wikitext
+++ b/en/p/palet.803129.wikitext
@@ -24,7 +24,7 @@
 # [[plate]]
 
 ===References===
-* [http://www.geocities.com/fijihindi/FijiHindiEnglishDict.htm#p Fiji Hindi Dictionary]
+* [http://web.archive.org/20080308065956/www.geocities.com/fijihindi/FijiHindiEnglishDict.htm#p Fiji Hindi Dictionary]
 
 [[Category:Fiji Hindi nouns]]
 [[Category:hif:Objects]]
