--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -46,6 +46,15 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 |passage=In the eyes of Mr. Farquhar Fenelon Cooke the apotheosis of the Celebrity was complete. The people of Asquith were not only willing to '''attend''' the house-warming, but had been worked up to the pitch of eagerness. The Celebrity as a matter of course was master of ceremonies.}}
 #* '''1994''', {{w|Nelson Mandela}}, ''{{w|Long Walk to Freedom}}'', Abacus 2010, p. 20:
 #*: I '''attended''' a one-room school next door to the palace and studied English, Xhosa, history and geography.
+# To be present with; to accompany; to be united or consequent to.
+#: ''a measure '''attended''' with ill effects''
+#* Dryden
+#*: What cares must then '''attend''' the toiling swain.
+# To wait for; to await; to remain, abide, or be in store for.
+#* John Locke
+#*: the state that '''attends''' all men after this
+#* Dryden
+#*: Three days I promised to '''attend''' my doom.
 
 =====Synonyms=====
 * {{sense|listen to}} [[behear]]
