--- a/en/n/NSA.26206.wikitext
+++ b/en/n/NSA.26206.wikitext
@@ -1,40 +1,45 @@
 {{also|-nsa|-nsä}}
 ==English==
 
-===Initialism===
-{{en-initialism}}
+===Adverb===
+{{en-adv|-}}
 
-# {{initialism of|no strings attached|No strings attached}}
+# {{initialism of|no strings attached}}
+
+===Adjective===
+{{en-adj|-}}
+
 # {{initialism of|[[not]] [[sexually]] [[active]]}}
-# {{context|government|USA|lang=en}} {{initialism of|w:National Security Agency|National Security Agency}}
+
+===Proper noun===
+{{en-proper noun}}
+
+# {{context|government|US|lang=en}} {{initialism of|w:National Security Agency|National Security Agency}}
 
 ====Translations====
-{{trans-top|National Security Agency}}
+{{trans-top|initialism: National Security Agency}}
 {{trans-mid}}
 * Russian: {{t|ru|АНБ|n|tr=a-en-bɛ́}}
 {{trans-bottom}}
 
 ===Anagrams===
-* [[ans.#English|ans.]] 
-* [[NAS#English|NAS]]
-* [[san#English|san]], [[San#English|San]], [[SAN#English|SAN]]
+* [[ans.#English|ans.]], [[NAS#English|NAS]], [[san#English|san]], [[San#English|San]], [[SAN#English|SAN]]
 
 [[Category:en:Espionage]]
+[[Category:en:Organizations]]
+[[Category:en:Sex]]
 
 ----
 
 ==Czech==
 
-==={{acronym-old|cs}}===
-'''NSA'''
+===Noun===
+{{head|cs|noun}}
 
-# [[NSAID]], [[nonsteroidal anti-inflammatory drug]]
+# [[NSAID]] (nonsteroidal anti-inflammatory drug)
 
 ====Synonyms====
-* [[nesteroidní antiflogistikum]] {{n}}
-
-[[Category:en:Organizations]]
-[[Category:en:Sex]]
+* {{l|cs|nesteroidní antiflogistikum}}
 
 [[de:NSA]]
 [[et:NSA]]
