--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -78,6 +78,7 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Armenian: {{t|hy|աղաց|tr=aġac'}}, {{t|hy|ջրաղաց|tr=ǰraġac'}}
 * Aromanian: {{t|rup|moarã|f}}
 * Asturian: {{t|ast|molín|m}}
+* Bashkir: {{t|ba|тирмән|sc=Cyrl}}
 * Catalan: {{t+|ca|molí|m}}
 * Czech: {{t+|cs|mlýn|m}}
 * Danish: {{t+|da|mølle|c}}
@@ -129,6 +130,7 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 {{trans-top|building housing a grinding apparatus}}
 * Asturian: {{t|ast|molín|m}}
 * Azeri: {{t+|az|dəyirman}}
+* Bashkir: {{t|ba|тирмән|sc=Cyrl}}
 * Basque: {{t|eu|errota}}, {{t|eu|eihera}}
 * Catalan: {{t+|ca|molí|m}}
 * Czech: {{t+|cs|mlýn}}
