--- a/en/m/millstream.720300.wikitext
+++ b/en/m/millstream.720300.wikitext
@@ -1,7 +1,12 @@
 ==English==
+===Alternative forms===
+*[[mill stream]], [[mill-stream]]
 
 ===Etymology===
-{{compound|mill|stream}}
+From {{compound|mill|stream}}.
+
+===Pronunciation===
+*{{a|UK}} {{IPA|/ˈmɪlstɹiːm/}}
 
 ===Noun===
 {{en-noun}}
