t+de:[[Mühldamm]] ([[WT:EDIT|Assisted]]) <mill dam#23922999>

--- a/en/m/mill dam.720303.wikitext
+++ b/en/m/mill dam.720303.wikitext
@@ -25,4 +25,5 @@ From {{compound|mill|dam}}.
 {{trans-top|dam constructed in order to create a millpond}}
 * Finnish: {{t|fi|myllypato}}
 {{trans-mid}}
+* German: {{t|de|Mühldamm|m}}
 {{trans-bottom}}
