/* English */ <sabre-toothed tiger#23987380>

--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -8,7 +8,7 @@
 ===Noun===
 {{en-noun|head=[[sabre-toothed]] [[tiger]]}}
 
-# Any of numerous [[species]] of extinct cat-like [[mammals]], of the ''{{taxlink|Machairodontinae|subfamily}}'' subfamily of the [[Felidae]].
+# Any of numerous [[species]] of extinct cat-like [[mammals]], of the [[Machairodontinae]] subfamily of the [[Felidae]].
 
 ====Synonyms====
 * [[sabrecat]] / [[sabercat]]
