t+el:[[παραβρίσκομαι]] t+el:[[παρευρίσκομαι]] t+el:[[παρίσταμαι]] t+el:[[φροντίζω]] t+el:[[μεριμνώ]] ([[WT:EDIT|Assisted]]) <attend#23991218>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -75,6 +75,7 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 * Bulgarian: {{t|bg|обръщам внимание}},  {{t|bg|грижа се}},  {{t+|bg|прислужвам}}
 * Finnish: {{t+|fi|huolehtia}}, {{t+|fi|pitää}} {{t+|fi|huoli|alt=huolta}},  {{t+|fi|hoitaa}} ([[tehtävä]]/[[asia]]/[[juttu]]/[[homma]])
 * German: {{t+|de|kümmern}}, {{t+|de|beachten}}
+* Greek: {{t+|el|φροντίζω|sc=Grek}}, {{t+|el|μεριμνώ|sc=Grek}}
 * Latin: {{t|la|attendō}}
 {{trans-mid}}
 * Lojban: {{t|jbo|jundi}}
@@ -95,6 +96,7 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 * French: {{t+|fr|assister}},  {{t+|fr|présent|alt=être présent}}
 * German: {{t+|de|teilnehmen}}, {{t+|de|besuchen}}
 {{trans-mid}}
+* Greek: {{t|el|παραβρίσκομαι|sc=Grek}}, {{t+|el|παρευρίσκομαι|sc=Grek}}, {{t+|el|παρίσταμαι|sc=Grek}}
 * Hungarian: {{t+|hu|eljár}}, {{t+|hu|jár}}, {{t+|hu|részt vesz}}
 * Italian: {{t+|it|partecipare}}
 * Japanese: {{t+|ja|出席|alt=出席する|tr=しゅっせきする, shusseki surú}},  {{t|ja|立ち会う|tr=たちあう, tachiau}}
