--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -18,6 +18,12 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 #*: There is no '''simple''' way to define precisely a complex arrangement  of parts, however homely the object may appear to be.
 # Without [[ornamentation]]; [[plain]].
 # Free from [[duplicity]]; [[guileless]], [[innocent]], [[straightforward]].
+#* Marston
+#*: Full many fine men go upon my score, as '''simple''' as I stand here, and I trust them.
+#* Byron
+#*: Must thou trust Tradition's '''simple''' tongue?
+#* Emerson
+#*: To be '''simple''' is to be great.
 # [[undistinguished|Undistinguished]] in social condition; of no special [[rank]].
 # {{context|now|_|rare|lang=en}} [[trivial|Trivial]]; [[insignificant]].
 #* '''1485''', Thomas Malory, ''Le Morte Darthur'', Book X:
@@ -26,6 +32,9 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 # {{context|chemistry|lang=en}} Consisting of one [[single]] substance; [[uncompounded]].
 # {{context|mathematics|lang=en}} Of a group: having no [[normal]] [[subgroup]].
 # {{context|botany|lang=en}} Not [[compound]], but possibly [[lobed]].
+# {{cx|obsolete|lang=en}} Mere; not other than; being only.
+#* Shakespeare
+#*: A medicine {{...}} whose '''simple''' touch / Is powerful to araise King Pepin.
 
 ====Synonyms====
 * {{sense|consisting of a single part or aspect}} [[onefold]]
