--- a/en/d/drolleries.741804.wikitext
+++ b/en/d/drolleries.741804.wikitext
@@ -3,9 +3,7 @@
 ===Noun===
 {{head|en}}
 
-# Plural of [[drollery]].
-
-[[Category:English plurals]][[Category:English plurals using obsolete wikisyntax]][[Category:English plurals using obsolete wikisyntax]]
+# {{plural of|drollery|lang=en}}
 
 [[ar:drolleries]]
 [[mg:drolleries]]
