--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -336,7 +336,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 {{trans-top|derogatory slang for police officer}}
 * Basque: {{t+|eu|txakur}}
 * Czech: {{t+|cs|fízl|m}}
-* Dutch: {{t+|nl|flik|m}}
+* Dutch: {{t+|nl|flik|m}}, {{t+|nl|smeris|n}}, {{t|nl|wout}}, {{t+|nl|juut}}, {{t+|nl|kit|p}}, {{t+|nl|kankerlijer|m}}, {{t|nl|tiefushoer|f}}, {{t+|nl|hoer|m|f}}
 * French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}} {{qualifier|verlan}}
 * German: {{t+|de|Bulle|m}}
 * Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}
