--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -186,7 +186,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm|en}} {{term|iland|lang=enm}
 * {{trreq|ne}}
 * Niuean: {{t|niu|motu}}
 * Norman: {{t|roa-nor|île}}
-* North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|eilun|n}}
+* North Frisian: {{qualifier|Mooring}} {{t|frr|ailönj|n}}; {{qualifier|Föhr-Amrum}} {{t|frr|eilun|n}}
 * Norwegian: {{t+|no|øy|m|f}}
 * Nottoway-Meherrin: {{t|nwy|eohtessieh}}
 * {{trreq|nov}}
