--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -279,7 +279,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * German: {{t+|de|blubbern}}
 * Greek: {{t+|el|χοχλάζω|tr=chochlázo}}
 * Hungarian: {{t+|hu|buborékol}}, {{t+|hu|bugyborékol}}
-* {{trreq|io}}
+* Ido: {{t+|io|ebuliar}}, {{t+|io|ebulieskar}}
 * Khmer: {{t|km|បែកពពុះ|tr=baek pɔpuh|sc=Khmr}}
 * Korean: {{t+|ko|부글거리다|tr=bugeul-georida|sc=Hang}}
 * Kurdish:
