--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -101,7 +101,7 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 * Italian: {{t+|it|partecipare}}
 * Japanese: {{t+|ja|出席|alt=出席する|tr=しゅっせきする, shusseki surú}},  {{t|ja|立ち会う|tr=たちあう, tachiau}}
 * Polish: [[uczęszczać]], [[brać udział]]
-* Portuguese: [[assistir]], [[participar em]], [[estar presente em]]
+* Portuguese: [[assistir]], [[participar em]], [[estar presente em]], {{t+|pt|frequentar}}
 * Russian: {{t+|ru|посещать|tr=poseščátʹ}} {{impf}},  {{t+|ru|присутствовать|tr=prisútstvovatʹ}} {{impf}}
 * Spanish: {{t+|es|asistir}}
 * Swedish: {{t+|sv|närvara}},  {{t+|sv|delta}}
