t+pt:[[cursar]] t-balance ([[WT:EDIT|Assisted]]) <attend#24075776>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -95,13 +95,13 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 * Finnish: {{t+|fi|osallistua}}, {{t+|fi|olla}} {{t+|fi|läsnä}}
 * French: {{t+|fr|assister}},  {{t+|fr|présent|alt=être présent}}
 * German: {{t+|de|teilnehmen}}, {{t+|de|besuchen}}
-{{trans-mid}}
 * Greek: {{t|el|παραβρίσκομαι|sc=Grek}}, {{t+|el|παρευρίσκομαι|sc=Grek}}, {{t+|el|παρίσταμαι|sc=Grek}}
+{{trans-mid}}
 * Hungarian: {{t+|hu|eljár}}, {{t+|hu|jár}}, {{t+|hu|részt vesz}}
 * Italian: {{t+|it|partecipare}}
 * Japanese: {{t+|ja|出席|alt=出席する|tr=しゅっせきする, shusseki surú}},  {{t|ja|立ち会う|tr=たちあう, tachiau}}
 * Polish: [[uczęszczać]], [[brać udział]]
-* Portuguese: [[assistir]], [[participar em]], [[estar presente em]], {{t+|pt|frequentar}}
+* Portuguese: [[assistir]], [[participar em]], [[estar presente em]], {{t+|pt|frequentar}}, {{t+|pt|cursar}}
 * Russian: {{t+|ru|посещать|tr=poseščátʹ}} {{impf}},  {{t+|ru|присутствовать|tr=prisútstvovatʹ}} {{impf}}
 * Spanish: {{t+|es|asistir}}
 * Swedish: {{t+|sv|närvara}},  {{t+|sv|delta}}
