--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -32,6 +32,9 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 # {{context|chemistry|lang=en}} Consisting of one [[single]] substance; [[uncompounded]].
 # {{context|mathematics|lang=en}} Of a group: having no [[normal]] [[subgroup]].
 # {{context|botany|lang=en}} Not [[compound]], but possibly [[lobed]].
+# {{cx|zoology|lang=en}} Consisting of a single individual or [[zooid]]; not [[compound]].
+#: ''a '''simple''' ascidian''
+# {{cx|mineralogy|lang=en}} [[homogenous]]
 # {{cx|obsolete|lang=en}} Mere; not other than; being only.
 #* Shakespeare
 #*: A medicine {{...}} whose '''simple''' touch / Is powerful to araise King Pepin.
