--- a/en/b/bitter pill.855105.wikitext
+++ b/en/b/bitter pill.855105.wikitext
@@ -4,5 +4,5 @@
 {{en-noun|head=[[bitter]] [[pill]]}}
 
 # {{alternative form of|bitter pill to swallow}}
-#* '''2004''', Simon Turnbull, "[http://www.independent.co.uk/sport/rugby/rugby-union/young-scots-give-williams-a-silver-lining-532366.html Young Scots give Williams a silver lining]," ''The Independent'' (UK), 7 Nov.:  
+#* '''2004''' Nov. 7, Simon Turnbull, "[http://www.independent.co.uk/sport/rugby/rugby-union/young-scots-give-williams-a-silver-lining-532366.html Young Scots give Williams a silver lining]," ''The Independent'' (UK):  
 #*: By the final whistle at Murrayfield last night, the Australians were choking back the '''bitter pill''' of disappointment and defeat.
