--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -30,6 +30,22 @@
 |passage=Most '''staff''' do not have the skills to cope with such challenging patients, who too often receive "impersonal" care and suffer from boredom, the first National Audit of Dementia found. It says hospitals should introduce "dementia champions.''}}
 #: ''The company employed 10 new members of '''staff''' this month.''
 # {{context|uncountable|lang=en}} A mixture of [[plaster]] and [[fibre]] used as a temporary exterior wall covering (see [[w:Staff (building material)|Wikipedia article]])
+# A pole, stick, or wand borne as an ensign of authority; a badge of office.
+#: ''a constable's '''staff'''''
+#* Shakespeare
+#*: Methought this '''staff''', mine office badge in court, / Was broke in twain.
+#* Hayward
+#*: All his officers brake their '''staves'''; but at their return new '''staves''' were delivered unto them.
+# A pole upon which a [[flag]] is supported and displayed.
+# {{cx|archaic|lang=en}} The [[rung]] of a [[ladder]].
+#* Dr. J. Campbell (E. Brown's Travels)
+#*: I ascend at one [ladder] of six hundred and thirty-nine '''staves'''.
+# A series of verses so disposed that, when it is concluded, the same order begins again; a stanza; a stave.
+#* Dryden
+#*: Cowley found out that no kind of '''staff''' is proper for an heroic poem, as being all too lyrical.
+# {{cx|engineering|lang=en}} An [[arbor]], as of a wheel or a pinion of a watch.
+# {{cx|surgery|lang=en}} The grooved director for the gorget, or knife, used in cutting for stone in the bladder.
+# {{cx|military|lang=en}} An establishment of officers in various departments attached to an army, to a section of an army, or to the commander of an army. The general's staff consists of those officers about his person who are employed in carrying his commands into execution.
 
 ====Synonyms====
 * {{sense|music}} [[stave]]
