--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -47,7 +47,7 @@
 * Hungarian: {{t+|hu|beállítás}}
 {{trans-mid}}
 * Interlingua: [[adjustamento]]
-* Irish: {{t|ga|gabháil|m}}
+* Irish: {{t|ga|gabháil|m}}, {{t|ga|ceartú|m}}
 * Italian: {{t+|it|adattamento|m}}, {{t+|it|inserimento|m}}
 * Japanese: {{t+|ja|調整|tr=ちょうせい, chōsei|sc=Jpan}}, {{t+|ja|調節|tr=ちょうせつ, chōsetsu|sc=Jpan}}
 * {{trreq|ko}}
