--- a/en/g/gagaku.801689.wikitext
+++ b/en/g/gagaku.801689.wikitext
@@ -1,7 +1,7 @@
 ==English==
 {{wikipedia|Gagaku}}
 ===Etymology===
-From {{etyl|ja|en}} 雅楽 (ががく ''gagaku''), from {{etyl|ltc|en}} 雅樂 (''ngǽ-ngæwk'' "ancient ceremonial music") (compare {{etyl|cmn|en}} ''yǎyuè'' [[雅乐]], {{yue}} ''ngaa<sup>5</sup>-ngok<sup>6</sup>'' 雅樂), from {{etyl|och|en}} 雅樂 (''*ŋˁraʔ-ŋˁrawk'' "courtly, ceremonial music"), from [[雅]] ("elegant", "refined") + [[樂]] ("music").
+From {{etyl|ja|en}} 雅楽 (ががく ''gagaku''), from {{etyl|ltc|en}} 雅樂 (''ngǽ-ngæwk'' "ancient ceremonial music") (compare {{etyl|cmn|en}} ''yǎyuè'' [[蒲团|''yǎyuè'' 蒲团]], {{yue}} ''ngaa<sup>5</sup>-ngok<sup>6</sup>'' 雅樂), from {{etyl|och|en}} 雅樂 (''*ŋˁraʔ-ŋˁrawk'' "courtly, ceremonial music"), from [[雅]] ("elegant", "refined") + [[樂]] ("music").
 
 ===Noun===
 {{en-noun|-}}
