--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -35,6 +35,16 @@ From {{etyl|la|en}} {{term|speciēs||appearance; quality|lang=la}}, from {{term|
 # {{context|obsolete|lang=en}} The [[image]] of something cast on a surface, or [[reflected]] from a surface, or [[refracted]] through a [[lens]] or [[telescope]]; a [[reflection]].
 #: ''I cast the '''species''' of the Sun onto a sheet of paper through a telescope.''
 # {{context|Roman Catholicism|lang=en}} Either of the two elements of the [[Eucharist]] after they have been [[consecrated]], so named because they retain the image of the bread and wine before their [[transubstantiation]] into the body and blood of Christ.
+# Visible or perceptible presentation; appearance; something perceived.
+#* Isaac Newton
+#*: the '''species''' of the letters illuminated with indigo and violet
+#* Dryden
+#*: Wit, {{...}} the faculty of imagination in the writer, which searches over all the memory for the '''species''' or ideas of those things which it designs to represent.
+# Coin, or coined silver, gold, or other metal, used as a circulating medium; [[specie]].
+#* Arbuthnot
+#*: There was, in the splendour of the Roman empire, a less quantity of current '''species''' in Europe than there is now.
+# A public spectacle or exhibition.
+#: {{rfquotek|Francis Bacon}}
 
 ====Usage notes====
 * {{term|specie}} is a separate word that means coin money, not the singular version of {{term|species}}.
