--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -3,6 +3,9 @@
 ==Hebrew==
 {{wikipedia|lang=he}}
 
+===Etymology===
+{{rfe|lang=he}}
+
 ===Pronunciation===
 * {{term|מְדִינַת יִשְׂרָאֵל||State of Israel|tr=medinát yisra'él|lang=he}}: {{audio|He-Medinat_Israel.ogg|Audio}}
 * {{a|IL}} {{IPA|/jis.ʁaˈel/|lang=he}}
@@ -26,6 +29,10 @@
 * {{l|he|עַם יִשְׂרָאֵל}}
 * {{l|he|בְּנֵי יִשְׂרָאֵל}}
 * {{l|he|מְדִינַת יִשְׂרָאֵל}}
+
+====Descendants====
+* Ancient Greek: {{l|grc|Ισραήλ|Ισρᾱήλ}}
+** Latin: {{l|la|Isrāēl}}
 
 [[Category:he:Countries]]
 
