--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -27,7 +27,7 @@ From {{etyl|enm|en}} {{term|fraccioun||a breaking|lang=enm}}, from {{etyl|xno|en
 #* Foxe
 #*: Neither can the natural body of Christ be subject to any '''fraction''' or breaking up.
 
-====Quotations====
+we r goons====
 * {{seeCites}}
 
 ====Derived terms====
