--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -7,7 +7,7 @@
 * {{rhymes|ɛrɪt}}
 
 ===Etymology 1===
-{{etyl|enm|en}} {{term|furet|lang=enm}}, {{term|ferret|lang=enm}}, from {{etyl|xno|en}} ''firet, furet'', diminutive of {{etyl|fro|en}} {{term|fuiron||weasel, ferret|lang=fro}}, from {{etyl|LL.|en}} {{term|furo||cat; robber|lang=la}}, diminutive of {{etyl|la|en}} {{term|fur||thief|lang=la}}.
+{{etyl|enm|en}} {{term|furet|lang=enm}}, {{term|ferret|lang=enm}}, from {{etyl|xno|en}} {{term|firet|lang=fro}}, {{term|furet|lang=fro}}, diminutive of {{etyl|fro|en}} {{term|fuiron||weasel, ferret|lang=fro}}, from {{etyl|LL.|en}} {{term|furo||cat; robber|lang=la}}, diminutive of {{etyl|la|en}} {{term|fur||thief|lang=la}}.
 
 ====Noun====
 {{en-noun}}
