--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -30,12 +30,14 @@
 * Russian: {{t+|ru|дама|f|tr=dáma|sc=Cyrl}}, {{t+|ru|госпожа|f|tr=gospožá|sc=Cyrl}}, {{t+|ru|сударыня|f|tr=sudárynja|sc=Cyrl}}
 {{trans-mid}}
 * Scottish Gaelic: {{t+|gd|baintighearna|f}}
+* Serbo-Croatian: {{t|sh|dama|f}}, {{t|sh|gospa}}
 {{trans-bottom}}
 
 {{trans-top|equivalent title to Sir for a female knight}}
 * Portuguese: {{t+|pt|dama|f}}
 {{trans-mid}}
 * Russian: {{t+|ru|леди|f|tr=lédi|sc=Cyrl}}, {{t|ru|дейм|f|tr=dɛjm|sc=Cyrl}}, {{t+|ru|дама|f|tr=dáma|sc=Cyrl}}
+* Serbo-Croatian: {{t|sh|dama}}
 {{trans-bottom}}
 
 {{trans-top|slightly derogatory way of referring to a woman}}
