--- a/en/t/togue.855176.wikitext
+++ b/en/t/togue.855176.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 {{en-noun|togue}}
 
-# [[lake trout|Lake trout]], {{taxlink|Salvelinus namaycush|species}}, a freshwater [[char]] of northern North America.
+# [[lake trout|Lake trout]], ''[[Salvelinus namaycush]]'', a freshwater [[char]] of northern North America.
 
 ====Synonyms====
 * [[grey trout]]
