--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -40,7 +40,7 @@ The inflected forms {{term|bade|lang=en}} and {{term|bidden|lang=en}} are archai
 * Hungarian: {{t+|hu|megparancsol}}, {{t+|hu|elrendel}}
 * Portuguese: {{t+|pt|mandar}}, {{t+|pt|ordenar}}
 * Russian: {{t+|ru|прика́зывать|impf}}, {{t+|ru|приказа́ть|pf}}
-* Ukrainian: {{t|uk|нака́зувати|impf|sc=Cyrl}}, {{t|uk|приказа́ти|pf}}
+* Ukrainian: {{t|uk|нака́зувати|impf|sc=Cyrl}}, {{t|uk|наказа́ти|pf}}
 {{trans-bottom}}
 
 {{trans-top|to invite}}
