--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -23,22 +23,22 @@
 {{trans-top|the mammal ''Mustela putorius furo''}}
 * Albanian: {{t|sq|qelbësi}}
 * Armenian: {{t|hy|ժանտաքիս|sc=Armn}}
-* Basque: [[hudo]]
+* Basque: {{t|eu|hudo}}
 * Belarusian: {{t|be|тхор|m|tr=txor|sc=Cyrl}}
-* Breton: [[fured]]
+* Breton: {{t|br|fured}}
 * Bulgarian: {{t+|bg|пор|m|tr=por|sc=Cyrl}}
-* Catalan: [[furó]], [[fura]]
+* Catalan: {{t|ca|furó}}, {{t|ca|fura}}
 * Chinese:
 *: Mandarin: {{t+|cmn|雪貂|tr=xuědiāo|sc=Hani}}
 * Czech: {{t|cs|fretka|f}}
 * Danish: {{t|da|fritte|c}}
 * Dutch: {{t+|nl|fret|m}}
 * Esperanto: {{t+|eo|furo}}
-* Estonian: [[tuhkur]], [[tőhk]]
+* Estonian: {{t|et|tuhkur}}, {{t|et|tőhk}}
 * Finnish: {{t+|fi|fretti}}
 * French: {{t+|fr|furet|m}}
-* Friulian: [[pudîs blanc]]
-* Galician: [[furón]]
+* Friulian: {{t|fur|pudîs blanc}}
+* Galician: {{t|gl|furón}}
 * German: {{t+|de|Frettchen|n}}
 * Greek: {{t+|el|κουνάβι|n|tr=kounávi}}, {{t+|el|νυφίτσα|f|tr=nyfítsa|sc=Grek}}
 * Hebrew: {{t|he|חָמוֹס|m|tr=khamós|sc=Hebr}}
@@ -48,7 +48,7 @@
 * Japanese: {{t|ja|フェレット|tr=feretto|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|futhet|m}}
 * Korean: {{t|ko|페레트|tr=pereteu|sc=Kore}}
-* Latvian: [[okšķeris]]
+* Latvian: {{t|lv|okšķeris}}
 * Lithuanian: {{t+|lt|šeškas|m}}
 * Macedonian: {{t|mk|ласица|f|tr=lásica}} <!-- weasel ?-->
 {{trans-mid}}
@@ -56,14 +56,14 @@
 * Maltese: {{t|mt|nemes}}
 * Navajo: {{t|nv|dlǫ́ʼii}}
 * Norwegian: {{t|no|frett}}
-* Occitan: [[fura]]
+* Occitan: {{t|oc|fura}}
 * Polish: {{t+|pl|fretka|f}}
 * Portuguese: {{t+|pt|furão|m}}
 * Romanian: {{t|ro|nevăstuică|f}}
-* Romansch: [[furet]]
+* Romansch: {{t|rm|furet}}
 * Russian: {{t+|ru|хорёк|m|tr=xorjók|sc=Cyrl}}
 * Sami: [[albinočáhppesbuoidda]], [[ferrehtta]]
-* Sardinian: [[furittu]], [[fughittu]]
+* Sardinian: {{t|sc|furittu}}, {{t|sc|fughittu}}
 * Scots: [[futret]] (''Doric dilect'')
 * Scottish Gaelic: {{t|gd|neas|f}}, {{t|gd|fearaid|f}}
 * Serbo-Croatian:
@@ -78,9 +78,9 @@
 * Tamil: {{t|ta|மரநாய் வகை|tr=ma.ra.nai |sc=Taml}}
 * Turkish: {{t+|tr|yaban}}, {{t|tr|dağ gelinciği}}
 * Ukrainian: {{t|uk|тхiр|m|tr=txir|sc=Cyrl}}
-* Upper Sorbian: [[łasyčka]]
-* Welsh: [[ffured]]
-* West Frisian: [[fret]]
+* Upper Sorbian: {{t|hsb|łasyčka}}
+* Welsh: {{t|cy|ffured}}
+* West Frisian: {{t|fy|fret}}
 {{trans-bottom}}
 
 ====Verb====
