Converting simple translation table items to use {{t}} <then#24154042>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -83,21 +83,21 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Japanese: {{t|ja|その時|tr=そのとき, sono toki}}, {{t|ja|その時点|tr=そのじてん, sono jiten}}
 * Khmer: {{t|km|ពេលនោះ|tr=peil nuh|sc=Khmr}}, {{t|km|កាលនោះ|tr=kaal nuh|sc=Khmr}}
 * Korean: {{t+|ko|그때|tr=geuttae|sc=Kore}}, {{t|ko|그 때|tr=geu ttae|sc=Kore}}
-* Kurdish: [[hingê]], [[wê]] [[dem|demê]], [[wî]] [[çax|çaxî]], wî [[wext|wextî]], wê [[gav|gavê]]
+* Kurdish: {{t|ku|hingê}}, [[wê]] [[dem|demê]], [[wî]] [[çax|çaxî]], wî [[wext|wextî]], wê [[gav|gavê]]
 * Latgalian: {{t|ltg|tod}}, {{t|ltg|tūlaik}}
 * Latin: {{t+|la|tum}}, {{t+|la|deinde}}, {{t+|la|tunc}}
 {{trans-mid}}
 * Latvian: {{t+|lv|tad}}
 * Lithuanian: {{t|lt|tada}}
 * Macedonian: {{t|mk|тогаш|tr=tógaš|sc=Cyrl}}
-* Malay: [[pada masa yang sama]]
+* Malay: {{t|ms|pada masa yang sama}}
 * Navajo: {{t|nv|índa}}
 * Neapolitan: {{t|nap|tanno}}
 * Norwegian: {{t+|no|da}}, {{t|no|den gang}}
 * Old English: {{t|ang|þā}}
 * Persian: {{t+|fa|پس|tr=pas|sc=fa-Arab}}
 * Polish: {{t+|pl|wówczas}}, {{t+|pl|wtedy}}
-* Portuguese: {{t+|pt|então}}, [[naquele]] {{t+|pt|tempo}}, [[naquela]] {{t+|pt|época}}, [[nesse tempo]], [[nessa]] {{t+|pt|época}}
+* Portuguese: {{t+|pt|então}}, [[naquele]] {{t+|pt|tempo}}, [[naquela]] {{t+|pt|época}}, {{t|pt|nesse tempo}}, [[nessa]] {{t+|pt|época}}
 * Romanian: {{t+|ro|atunci}}
 * Russian: {{t+|ru|тогда|tr=togdá}}
 * Scots: {{t|sco|than}}
@@ -142,12 +142,12 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Japanese: {{t|ja|それから|tr=sorekara}}, {{t|ja|その後|tr=sono ato}}, {{t|ja|その後|tr=sono go}}, {{t|ja|そして|tr=soshite}}
 * Khmer: {{t|km|រួចមក|tr=ruəc mɔɔk|sc=Khmr}}, {{t|km|បន្ទាប់មក|tr=bɑntoap mɔɔk|sc=Khmr}}, {{t|km|ក្រោយមក|tr=kraoy mɔɔk|sc=Khmr}}
 * Korean: {{t|ko|나중에|tr=najung-e|sc=Kore}}, {{t+|ko|이후|tr=ihu|sc=Kore}}
-* Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
+* Kurdish: {{t|ku|paşî}}, {{t|ku|dûre}}, {{t|ku|piştre}}, {{t|ku|dûvre}}, {{t|ku|peyre}}
 * Latin: {{t+|la|deinde}}, {{t+|la|exinde}}
 * Luxembourgish: {{t+|lb|dunn}}
 {{trans-mid}}
 * Macedonian: {{t|mk|потоа|tr=potoa|sc=Cyrl}}
-* Malay: [[tidak lama kemudian]]
+* Malay: {{t|ms|tidak lama kemudian}}
 * Maori: {{t|mi|kātahi}}
 * Norwegian: {{t+|no|så}}, {{t+|no|deretter}}, {{t+|no|siden}}
 * Novial: {{t|nov|tand}}
@@ -155,7 +155,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Pashto: {{t+|ps|بيا|tr=byâ}}
 * Persian: {{t+|fa|سپس|tr=sepas|sc=fa-Arab}}, {{t+|fa|پس|tr=pas|sc=fa-Arab}}, {{t+|fa|بعد|tr=ba'd|sc=fa-Arab}}
 * Polish: (a) [[następnie]], (a) {{t+|pl|potem}}
-* Portuguese: [[então]], {{t+|pt|depois}}, {{t|pt|em seguida}}
+* Portuguese: {{t|pt|então}}, {{t+|pt|depois}}, {{t|pt|em seguida}}
 * Romanian: {{t+|ro|apoi}}
 * Russian: {{t+|ru|затем|tr=zatém}}, {{t+|ru|потом|tr=potóm}}, {{t+|ru|после|tr=pósle|sc=Cyrl}} {{qualifier|colloquial}}
 * Scottish Gaelic: {{t|gd|an dèidh sin}}, {{t|gd|an dèidh làimhe}}
@@ -166,7 +166,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Slovene: {{t|sl|potém}}
 * Spanish: {{t+|es|luego}}
 * Swedish: {{t+|sv|därpå}}, {{t+|sv|sen}}, {{t+|sv|sedan}}, {{t+|sv|så}}
-* Taos: [[yíane]]
+* Taos: {{t|twf|yíane}}
 * Thai: {{t|th|แล้วก็|tr=láew gôr|sc=Thai}}
 * Tok Pisin: {{t|tpi|orait}}
 * Ukrainian: {{t|uk|потім|tr=pótim|sc=Cyrl}}
@@ -192,9 +192,9 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Hungarian: {{t+|hu|aztán}}, {{t+|hu|majd}}
 * Japanese: {{t|ja|それから|tr=sorekara}}, {{t|ja|その後|tr=sono ato}}, {{t|ja|その後|tr=sono go}}, {{t|ja|次に|tr=tsugi-ni}}
 {{trans-mid}}
-* Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
+* Kurdish: {{t|ku|paşî}}, {{t|ku|dûre}}, {{t|ku|piştre}}, {{t|ku|dûvre}}, {{t|ku|peyre}}
 * Latin: {{t+|la|deinde}}, {{t+|la|exinde}}
-* Malay: [[selepas itu]]
+* Malay: {{t|ms|selepas itu}}
 * Navajo: {{t|nv|índa}}
 * Norwegian: {{t+|no|så}}, {{t+|no|deretter}}
 * Old English: {{t|ang|þā}}
@@ -206,7 +206,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Slovene: {{t|sl|potém}}
 * Spanish: {{t+|es|después}}
 * Swedish: {{t+|sv|dessutom}}, {{t+|sv|sen}}, {{t+|sv|sedan}}
-* Taos: [[yíane]]
+* Taos: {{t|twf|yíane}}
 * Volapük: {{t+|vo|täno}}
 {{trans-bottom}}
 
@@ -235,13 +235,13 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Kurdish: {{t+|ku|pa}}, {{t+|ku|de}}, {{t+|ku|madem}}
 * Latin: {{t+|la|tunc}}, {{t+|la|tum}}
 * Lithuanian: {{t|lt|tada}}
-* Malay: [[oleh sebab yang demikian]]
+* Malay: {{t|ms|oleh sebab yang demikian}}
 * Norwegian: {{t+|no|da}}, {{t+|no|i så fall}}
 * Old English: {{t|ang|þā}}
 * Pashto: {{t+|ps|بيا|tr=byâ}}
 * Persian: {{t+|fa|پس|tr=pas|sc=fa-Arab}}
-* Polish: [[to]], [[wówczas]]
-* Portuguese: [[então]], [[nesse]] {{t+|pt|caso}}
+* Polish: {{t|pl|to}}, {{t|pl|wówczas}}
+* Portuguese: {{t|pt|então}}, [[nesse]] {{t+|pt|caso}}
 * Romanian: {{t+|ro|atunci}}
 * Russian: {{t+|ru|тогда|tr=togdá}}, {{t|ru|в таком случае|tr=v takóm slúčaje|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|ma-thà}}, {{t|gd|a-rèist}}
