--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -71,7 +71,7 @@ Literally "beyond the river [[Dniester]]".
 {{trans-bottom}}
 
 [[Category:en:Place names]]
-
+[[Category:en:Disputed territories]]
 ----
 
 ==Asturian==
