Converting simple translation table items to use {{t}} <pig#24155521>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -129,11 +129,11 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Breton: {{t+|br|pemoc'h|m}}
 * Bulgarian: {{t+|bg|свиня|f|tr=svinjá}}
 * Burmese: {{t+|my|ဝက်|tr=wé|sc=Mymr}}
-* Campidanese Sardinian: [[procu]] {{g|m}}, [[mannali]] {{g|m}}, [[sue]] {{g|f}}
+* Campidanese Sardinian: {{t|sro|procu|m}}, {{t|sro|mannali|m}}, {{t|sro|sue|f}}
 * Catalan: {{t+|ca|porc|m}}
 * Cebuano: {{t|ceb|baboy}}
 * Chamicuro: {{t|ccc|kuuchi}}
-* Chamorro: [[babui]]
+* Chamorro: {{t|ch|babui}}
 * {{trreq|ce}}
 * Cherokee: {{t|chr|ᏏᏆ|tr=siqua}}
 * Chinese:
