Converting simple translation table items to use {{t}} <though#24156288>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -37,24 +37,24 @@ From {{etyl|enm|en}} {{term|thaugh|lang=enm}}, {{term|thagh||lang=enm}}, from {{
 * Georgian: {{t|ka|მაინც|sc=Geor}}
 * German: {{t+|de|trotzdem}}, {{t+|de|doch}}, {{t+|de|allerdings}}
 * Greek: [[εν τούτοις]] (én tútis), [[παρά ταύτα]] (pará táfta), [[ωστόσο]] (ostóso)
-* Indonesian: [[bagaimanapun juga]]
-* Interlingua: [[benque]], [[malgrado]], [[non obstante]]
+* Indonesian: {{t|id|bagaimanapun juga}}
+* Interlingua: {{t|ia|benque}}, {{t|ia|malgrado}}, {{t|ia|non obstante}}
 * Italian: {{t+|it|comunque}}, {{t+|it|nonostante}}, {{t|it|in ogni caso}}, {{t|it|ad ogni modo}}
 * Japanese: {{t+|ja|にもかかわらず|tr=nimokakawarazu}}, {{t|ja|それでも|tr=soredemo}}
 * Kurdish: {{t+|ku|dîsa jî|sc=ku-Arab}}, {{t|ku|her wiha|sc=ku-Arab}}
 {{trans-mid}}
-* Luo: [[kata kamano]]
+* Luo: {{t|luo|kata kamano}}
 * Malay: {{t|ms|walau bagaimana}}
 * Navajo: {{t|nv|ndi}}
 * Norwegian: {{t+|no|dog}}
 * Persian: {{t+|fa|گرچه|tr=garče|sc=fa-Arab}}
 * Polish: {{t+|pl|jednak}}
-* Portuguese: no [[entanto]], [[não obstante]]
+* Portuguese: no [[entanto]], {{t|pt|não obstante}}
 * Russian: {{t+|ru|тем не менее}}, {{t+|ru|однако}}, {{t+|ru|всё-таки}}
 * Scots: {{t|sco|tho}}
 * Scottish Gaelic: {{t|gd|ge-tà}}
 * Spanish: {{t|es|no obstante}}
-* Swahili: [[ijapokuwa]], [[hata hivyo]]
+* Swahili: {{t|sw|ijapokuwa}}, {{t|sw|hata hivyo}}
 * Ukrainian: {{t|uk|тим не менш|tr=tym ne mensh|sc=Cyrl}}
 * Volapük: [[do#Volapük|do]]
 {{trans-bottom}}
