--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -65,7 +65,7 @@ From {{etyl|enm|en}} {{term|fraccioun||a breaking|lang=enm}}, from {{etyl|xno|en
 
 ====Translations====
 {{trans-top|part of a whole}}
-* Catalan: [[fracció]], {{g|f}}
+* Catalan: {{t|ca|fracció}}, {{g|f}}
 * Czech: {{t+|cs|zlomek|m}}
 * Danish: {{t|da|brøkdel|c}}
 * Finnish: {{t|fi|murto-osa}}
@@ -74,22 +74,22 @@ From {{etyl|enm|en}} {{term|fraccioun||a breaking|lang=enm}}, from {{etyl|xno|en
 * Irish: {{t|ga|codán|m}}
 * Italian: {{t+|it|frazione|f}}
 * Japanese: [[断片]] (dan-pen)
-* Macedonian: {{t|mk|дел|m|tr=del}},  {{t|mk|делче|n|tr=délče}}
+* Macedonian: {{t|mk|дел|m|tr=del}}, {{t|mk|делче|n|tr=délče}}
 {{trans-mid}}
 * Norwegian: {{t|no|andel|m}}, {{t+|no|brøkdel|m}}, {{t+|no|brøk|m}}; {{t|no|fraksjon|m}}
 * Polish: {{t+|pl|ułamek|m}}, {{t+|pl|cząstka|f}}
 * Portuguese: {{qualifier|Brazil}} [[fração]] {{g|f}}, {{qualifier|Portugal}} [[fracção]] {{g|f}}
 * Russian: {{t+|ru|часть|f}}
-* Scottish Gaelic: {{t|gd|bìdeag|f}},{{t|gd|criomag|f}},{{t|gd|mìr|m}}
+* Scottish Gaelic: {{t|gd|bìdeag|f}}, {{t|gd|criomag|f}}, {{t|gd|mìr|m}}
 * Serbo-Croatian: {{t|sh|dȉo|m}}, {{t|sh|òdsječak|m}}
-* Spanish: [[fracción]], {{g|f}}
+* Spanish: {{t|es|fracción}}, {{g|f}}
 * Swedish: {{t|sv|bråkdel|c}}
 * Tagalog: {{t|tl|bahagimbilang}}
 {{trans-bottom}}
 
 {{trans-top|arithmetic: ratio}}
 * Armenian: {{t|hy|կոտորակ|tr=kotorak}}
-* Catalan: [[fracció]], {{g|f}}
+* Catalan: {{t|ca|fracció}}, {{g|f}}
 * Czech: {{t+|cs|zlomek|m}}
 * Danish: {{t|da|brøk|c}}
 * Dutch: {{t+|nl|breuk|c}}
@@ -111,7 +111,7 @@ From {{etyl|enm|en}} {{term|fraccioun||a breaking|lang=enm}}, from {{etyl|xno|en
 * Scottish Gaelic: {{t|gd|bloigh|f}}
 * Serbo-Croatian: {{t|sh|rázlomak|m}}
 * Slovene: {{t+|sl|ulomek|m}}
-* Spanish: [[fracción]], {{g|f}}, [[quebrado]] {{g|m}}
+* Spanish: {{t|es|fracción}}, {{g|f}}, {{t|es|quebrado|m}}
 * Swedish: {{t+|sv|bråk|n}}
 * Tajik: {{t|tg|каср|sc=Cyrl}}
 {{trans-bottom}}
