--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -45,7 +45,7 @@
 * {{trreq|gn}}
 * Hebrew: {{t+|he|כִּוּוּן|m}}
 * Hungarian: {{t+|hu|beállítás}}
-* Interlingua: [[adjustamento]]
+* Interlingua: {{t|ia|adjustamento}}
 {{trans-mid}}
 * Irish: {{t|ga|gabháil|m}}, {{t|ga|ceartú|m}}
 * Italian: {{t+|it|adattamento|m}}, {{t+|it|inserimento|m}}
@@ -54,13 +54,13 @@
 * Kyrgyz: {{t+|ky|жөнгө салуу}}, {{t+|ky|ыңгайлаштыруу}}, {{t|ky|ылайыктоо}}
 * Latin: {{t|la|accommodātiō|f}}
 * Polish: {{t+|pl|ustawienie|n}}, {{t|pl|regulacja|f}}
-* Portuguese: [[ajustamento]] {{g|m}}, [[ajuste]] {{g|m}}
+* Portuguese: {{t|pt|ajustamento|m}}, {{t|pt|ajuste|m}}
 * Russian: {{t+|ru|приспосабливание|tr=prisposáblivanije|sc=Cyrl}}, {{t+|ru|регулировка|f|tr=reguliróvka|sc=Cyrl}}, {{t+|ru|настройка|f|tr=nastrójka|sc=Cyrl}}, {{t+|ru|юстировка|f|tr=justiróvka}}
 * Slovak: {{t|sk|prispôsobenie|n}}, {{t|sk|úprava|f}}
-* Slovene: [[popravek]] {{g|m}}
+* Slovene: {{t|sl|popravek|m}}
 * Spanish: {{t+|es|ajuste|m}}, {{t+|es|modificación|f}}
 * Swedish: {{t+|sv|justering|c}}
-* Telugu: [[సర్దుబాటు]]
+* Telugu: {{t|te|సర్దుబాటు}}
 * {{trreq|tpn}}
 * Turkish: {{t+|tr|ayarlama}}, {{t+|tr|ayar}}
 * Welsh: {{t|cy|cyweiriad|m}}
