Converting simple translation table items to use {{t}} <rabbit#24158200>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -74,7 +74,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Dena'ina: {{t|tfn|hvaya}}
 * Dutch: {{t+|nl|konijn|n}}
 * {{trreq|aer}}
-* Esperanto: {{qualifier|♂♀}} {{t|eo|kuniklo}}, {{qualifier|♂}} {{t|eo|virkuniklo}}, {{qualifier|neologism ♂}} {{t|eo|kunikliĉo}},{{qualifier|♀}} {{t|eo|kuniklino}}, {{qualifier|♂♀ offspring}} {{t|eo|kuniklido}}, {{qualifier|diminutive ♂♀}} {{t|eo|kunikleto}}
+* Esperanto: {{qualifier|♂♀}} {{t|eo|kuniklo}}, {{qualifier|♂}} {{t|eo|virkuniklo}}, {{qualifier|neologism ♂}} {{t|eo|kunikliĉo}}, {{qualifier|♀}} {{t|eo|kuniklino}}, {{qualifier|♂♀ offspring}} {{t|eo|kuniklido}}, {{qualifier|diminutive ♂♀}} {{t|eo|kunikleto}}
 * Estonian: {{t|et|küülik}}
 * Ewe: {{t|ee|fɔmizi}}
 * Faroese: {{t|fo|kanin}}
@@ -182,8 +182,8 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Tswana: {{t|tn|mmutla}}
 * Turkish: {{t+|tr|ada tavşanı}}, {{t+|tr|tavşan}}
 * Turkmen: {{t|tk|towşan}}
-* Tz'utujil: [[umul]]
-* Tzotzil: [[t'ul]]
+* Tz'utujil: {{t|tzj|umul}}
+* Tzotzil: {{t|tzo|t'ul}}
 * Ukrainian: {{t|uk|кріль|m|tr=kril’}}, {{t+|uk|кролик|m|tr=królyk}}
 * Urdu: {{t|ur|خرگوش|m|tr=xargoś|sc=ur-Arab}}, {{t|ur|ششک|m|tr=śaśak|sc=ur-Arab}}
 * Uzbek: {{t|uz|quyon}}, {{t|uz|xargo'sh}}
