--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -452,7 +452,7 @@ Borrowed from {{etyl|la|fro}} {{term|simplex|lang=la}}.
 {{es-noun|mf}}
 
 # [[simpleton]], [[fool]]
-# {{context|pharmacology|masculine|lang=es}} [[simple#English|simple]]
+# {{context|pharmacology|masculine only|lang=es}} [[simple#English|simple]]
 
 ----
 
