Converting simple translation table items to use {{t}} <at#24159576>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -63,7 +63,7 @@ From {{etyl|enm|en}} {{term|at|lang=enm}}, from {{etyl|ang|en}} {{term|æt||at, 
 * Breton: [[e#Breton|e]]
 * Bulgarian: {{t+|bg|в|tr=v|sc=Cyrl}}, {{t+|bg|на|tr=na|sc=Cyrl}}, {{t+|bg|при|tr=pri|sc=Cyrl}}, {{t+|bg|до|tr=do|sc=Cyrl}}
 * Burmese: {{t+|my|မှာ|tr=hma|sc=Mymr}}, {{t|my|၌|tr=hnaik|sc=Mymr}}
-* Catalan: [[a]]
+* Catalan: {{t|ca|a}}
 * Chinese:
 *: Cantonese: {{t|yue|喺|tr=hai2|sc=Hani}} {{qualifier|vernacular}}, {{t|yue|在|tr=joi6|sc=Hani}} {{qualifier|formal}}
 *: Mandarin: {{t+|cmn|在|tr=zài|sc=Hani}}
@@ -78,7 +78,7 @@ From {{etyl|enm|en}} {{term|at|lang=enm}}, from {{etyl|ang|en}} {{term|æt||at, 
 * Greek: [[στον]] (ston) {{g|m}}, [[στη]] (sti) {{g|f}}, [[στο]] (sto) {{g|n}}; [[στους]] (stous) {{g|m-p}}, [[στις]] (stis) {{g|f-p}}, [[στα]] (sta) {{g|n-p}}
 * Hebrew: {{t|he|אֵצֶל|tr=etsél|sc=Hebr}}
 * Hungarian: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''([[superessive case]])''; [[-nál]] / [[-nél]] ''([[adessive case]])''
-* Ido: [[ye]]
+* Ido: {{t|io|ye}}
 * Interlingua: [[a#Interlingua|a]], [[in#Interlingua|in]]
 * Irish: {{t|ga|ag}}
 * Italian: {{t+|it|a}}, {{t+|it|in}}
@@ -96,7 +96,7 @@ From {{etyl|enm|en}} {{term|at|lang=enm}}, from {{etyl|ang|en}} {{term|æt||at, 
 * Navajo: {{t|nv|-di}}, {{t|nv|-gi}}
 * Neapolitan: {{t|nap|a}}
 * Norwegian: {{t+|no|på}}
-* Novial: [[che]], [[an]], [[sur]]
+* Novial: {{t|nov|che}}, {{t|nov|an}}, {{t|nov|sur}}
 * Persian: {{t+|fa|در|tr=dar|sc=fa-Arab}}
 * Polish: {{t+|pl|u}}, {{t+|pl|przy}}
 * Portuguese: {{t+|pt|a}}, {{t+|pt|em}}
@@ -133,7 +133,7 @@ From {{etyl|enm|en}} {{term|at|lang=enm}}, from {{etyl|ang|en}} {{term|æt||at, 
 * Breton: [[da#Breton|da]]
 * Bulgarian: {{t+|bg|в|tr=v|sc=Cyrl}}
 * Burmese: {{t+|my|မှာ|tr=hma|sc=Mymr}}, {{t|my|၌|tr=hnaik|sc=Mymr}}
-* Catalan: [[a]]
+* Catalan: {{t|ca|a}}
 * Chinese:
 *: Mandarin: {{qualifier|no preposition is uzed, e.g.:}} {{Hani|[[五]][[點鐘]]}}, {{Hani|[[五]][[点钟]]}} (wǔ diǎnzhōng) or {{Hani|[[五]][[點]]}}, {{Hani|[[五]][[点]]}} (wǔ diǎn) "at five o'clock"
 * Czech: {{t+|cs|v}}
@@ -151,13 +151,13 @@ From {{etyl|enm|en}} {{term|at|lang=enm}}, from {{etyl|ang|en}} {{term|æt||at, 
 * Japanese: {{t+|ja|に|tr=...ni|alt=...に|sc=Jpan}}
 * Korean: {{t+|ko|에|tr=...e|alt=...에|sc=Kore}}
 * Kurdish:
-*: Kurmanji: [[li]]
+*: Kurmanji: {{t|kmr|li}}
 *: Sorani: ([[le]])
 * Latin: ''[[ablative]] case''
 * Macedonian: {{t|mk|во|tr=vo}}
 * Malay: {{t|ms|pada}}
 * Maltese: {{t|mt|fi}}
-* Novial: [[ye]]
+* Novial: {{t|nov|ye}}
 * Polish: {{t+|pl|o}}, {{t+|pl|w}}
 * Portuguese: {{t+|pt|a}}
 * Romanian: {{t|ro|la}}
@@ -194,15 +194,15 @@ From {{etyl|enm|en}} {{term|at|lang=enm}}, from {{etyl|ang|en}} {{term|æt||at, 
 * Korean: {{t+|ko|에게|tr=...ege|alt=...에게|sc=Kore}}
 {{trans-mid}}
 * Kurdish:
-*: Kurmanji: [[li]]
+*: Kurmanji: {{t|kmr|li}}
 *: Sorani: ([[le]])
 * Latin: {{t+|la|ad}}
 * Macedonian: {{t|mk|во|tr=vo}}, {{t|mk|на|tr=na}}
 * Norwegian: {{t+|no|på}}
-* Novial: [[vers]], [[a]]
+* Novial: {{t|nov|vers}}, {{t|nov|a}}
 * Polish: {{t+|pl|na}}, {{t+|pl|do}}
 * Portuguese: {{t+|pt|a}}
-* Romanian: [[înspre]], {{t|ro|spre}}
+* Romanian: {{t|ro|înspre}}, {{t|ro|spre}}
 * Russian: {{t+|ru|в|tr=v|sc=Cyrl}}, {{t+|ru|на|tr=na|sc=Cyrl}}
 * Slovak: {{t+|sk|do}}
 * Spanish: {{t+|es|a}}
