--- a/en/d/Dinkel.803423.wikitext
+++ b/en/d/Dinkel.803423.wikitext
@@ -2,7 +2,7 @@
 ==German==
 ===Noun===
 {{de-noun|m|Dinkels|Dinkel}}
-# [[spelt#Etymology_2|spelt]], [[Triticum spelta]]
+# [[spelt#Etymology_2|spelt]], {{taxlink|Triticum spelta|species|noshow=1}}
 [[Category:de:Grains]]
 
 [[cs:Dinkel]]
