--- a/en/m/merchant navy.776864.wikitext
+++ b/en/m/merchant navy.776864.wikitext
@@ -7,7 +7,7 @@
 
 ====Translations====
 {{trans-top|civilian naval fleet}}
-* Dutch: {{t|nl|handelsvloot}} {{f|m}}
+* Dutch: {{t|nl|handelsvloot|f|m}}
 * French: {{t+|fr|marine marchande|f}}
 * German: {{t+|de|Handelsmarine|f}}, {{t|de|Handelsflotte|f}}
 {{trans-mid}}
