--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -275,7 +275,7 @@ From the noun ''mill''
 {{trans-mid}}
 * Portuguese: {{t+|pt|moer}}
 * Romanian: {{t+|ro|măcina}}
-* Russian: {{t+|ru|молоть|tr=molót'}} {{impf}}, {{t+|ru|смолоть|tr=smolót'}} {{pf.}}
+* Russian: {{t+|ru|молоть|impf|tr=molót'}}, {{t+|ru|смолоть|pf|tr=smolót'}}
 * Scottish Gaelic: {{t|gd|meil}}
 * Spanish: {{t+|es|moler}}
 * Swedish: {{t+|sv|mala}}
