--- a/en/a/aziridine.742293.wikitext
+++ b/en/a/aziridine.742293.wikitext
@@ -20,7 +20,7 @@
 * Chinese: [[氮丙啶]] (dànbǐngdìng)
 * Finnish: {{t|fi|etyleeni-imiini}}
 {{trans-mid}}
-* German: [[Ethylenimin]] {{n}}
+* German: {{t|de|Ethylenimin|n}}
 * Korean: [[에틸렌이민]] (etillenimin)
 {{trans-bottom}}
 
