Converting simple translation table items to use {{t}} <attend#24167732>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -72,7 +72,7 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 
 =====Translations=====
 {{trans-top|to turn one's consideration to, deal with}}
-* Bulgarian: {{t|bg|обръщам внимание}},  {{t|bg|грижа се}},  {{t+|bg|прислужвам}}
+* Bulgarian: {{t|bg|обръщам внимание}}, {{t|bg|грижа се}}, {{t+|bg|прислужвам}}
 * Finnish: {{t+|fi|huolehtia}}, {{t+|fi|pitää}} {{t+|fi|huoli|alt=huolta}},  {{t+|fi|hoitaa}} ([[tehtävä]]/[[asia]]/[[juttu]]/[[homma]])
 * German: {{t+|de|kümmern}}, {{t+|de|beachten}}
 * Greek: {{t+|el|φροντίζω|sc=Grek}}, {{t+|el|μεριμνώ|sc=Grek}}
@@ -86,25 +86,25 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 
 {{trans-top|to be present at}}
 * Arabic: {{t|ar|حضر|tr=ḥaḍara}}
-* Bulgarian: {{t|bg|присъствам}},  {{t+|bg|посещавам}}
+* Bulgarian: {{t|bg|присъствам}}, {{t+|bg|посещавам}}
 * Chinese:
 *: Mandarin: {{t+|cmn|出席|tr=chūxí|sc=Hani}}
 * Czech: {{t|cs|zúčastnit se}}, {{t+|cs|účastnit se}}
-* Dutch: {{t+|nl|volgen}},  {{t+|nl|bijwonen}},  {{t|nl|aanwezig zijn}}
+* Dutch: {{t+|nl|volgen}}, {{t+|nl|bijwonen}}, {{t|nl|aanwezig zijn}}
 * Esperanto: {{t|eo|ĉeesti}}
 * Finnish: {{t+|fi|osallistua}}, {{t+|fi|olla}} {{t+|fi|läsnä}}
-* French: {{t+|fr|assister}},  {{t+|fr|présent|alt=être présent}}
+* French: {{t+|fr|assister}}, {{t+|fr|présent|alt=être présent}}
 * German: {{t+|de|teilnehmen}}, {{t+|de|besuchen}}
 {{trans-mid}}
 * Greek: {{t|el|παραβρίσκομαι|sc=Grek}}, {{t+|el|παρευρίσκομαι|sc=Grek}}, {{t+|el|παρίσταμαι|sc=Grek}}
 * Hungarian: {{t+|hu|eljár}}, {{t+|hu|jár}}, {{t+|hu|részt vesz}}
 * Italian: {{t+|it|partecipare}}
-* Japanese: {{t+|ja|出席|alt=出席する|tr=しゅっせきする, shusseki surú}},  {{t|ja|立ち会う|tr=たちあう, tachiau}}
-* Polish: [[uczęszczać]], [[brać udział]]
-* Portuguese: [[assistir]], [[participar em]], [[estar presente em]], {{t+|pt|frequentar}}, {{t+|pt|cursar}}
-* Russian: {{t+|ru|посещать|tr=poseščátʹ}} {{impf}},  {{t+|ru|присутствовать|tr=prisútstvovatʹ}} {{impf}}
+* Japanese: {{t+|ja|出席|alt=出席する|tr=しゅっせきする, shusseki surú}}, {{t|ja|立ち会う|tr=たちあう, tachiau}}
+* Polish: {{t|pl|uczęszczać}}, {{t|pl|brać udział}}
+* Portuguese: {{t|pt|assistir}}, {{t|pt|participar em}}, {{t|pt|estar presente em}}, {{t+|pt|frequentar}}, {{t+|pt|cursar}}
+* Russian: {{t+|ru|посещать|impf|tr=poseščátʹ}}, {{t+|ru|присутствовать|impf|tr=prisútstvovatʹ}}
 * Spanish: {{t+|es|asistir}}
-* Swedish: {{t+|sv|närvara}},  {{t+|sv|delta}}
+* Swedish: {{t+|sv|närvara}}, {{t+|sv|delta}}
 * Welsh: {{t+|cy|mynychu}}
 {{trans-bottom}}
 
