--- a/en/h/hander.4308.wikitext
+++ b/en/h/hander.4308.wikitext
@@ -7,7 +7,7 @@
 
 ====Translations====
 {{trans-top|a conveyor in succession}}
-* Dutch: [[overhandiger]]
+* Dutch: {{t|nl|overhandiger}}
 {{trans-mid}}
 {{trans-bottom}}
 
