--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -2,7 +2,7 @@
 
 ===Pronunciation===
 * {{a|UK|US}} {{IPA|/ðɛn/}}
-* {{a|Canada}} {{IPA|/ðen/}}
+* {{a|Australia}} {{IPA|/ðen/}}
 * {{audio|en-us-then.ogg|Audio (US)}}
 * Homophones: ''unstressed'' [[than]]<!-- (distinguished in WEAE: /ðæn/) -->
 * {{rhymes|ɛn}}
