--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -4,7 +4,7 @@
 * {{a|UK|US}} {{IPA|/ðɛn/}}
 * {{a|Australia}} {{IPA|/ðen/}}
 * {{audio|en-us-then.ogg|Audio (US)}}
-* Homophones: ''unstressed'' [[than]]<!-- (distinguished in WEAE: /ðæn/) -->
+* {{homophones|than|lang=en}} {{qualifier|unstressed, or for some speakers when stressed}}
 * {{rhymes|ɛn}}
 
 ===Etymology===
