Converting simple translation table items to use {{t}} <oscillogram#24169818>

--- a/en/o/oscillogram.719990.wikitext
+++ b/en/o/oscillogram.719990.wikitext
@@ -7,9 +7,9 @@
 
 ====Translations====
 {{trans-top|produced by oscillograph}}
-* Bulgarian: [[осцилограма]] {{f}}
+* Bulgarian: {{t|bg|осцилограма|f}}
 {{trans-mid}}
-* Finnish: [[oskillogrammi]]
+* Finnish: {{t|fi|oskillogrammi}}
 {{trans-bottom}}
 
 [[de:oscillogram]]
