--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -41,7 +41,7 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * Hungarian: {{t+|hu|pizsama}}
 * Indonesian: {{t+|id|piyama}}
 {{trans-mid}}
-* Interlingua: [[pajama]]
+* Interlingua: {{t|ia|pajama}}
 * Italian: {{t+|it|pigiama|m}}
 * Japanese: {{t|ja|パジャマ|tr=pajama}}, {{t|ja|寝間着|tr=ねまき, nemaki}}
 * Korean: {{t+|ko|파자마|tr=pajama|sc=Hang}}
