--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -97,8 +97,9 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 ===Verb===
 {{en-verb|sirr|ed}}
 
-# to address somebody using sir
-#: ''Please don't '''sir''' me!''
+# To address (someone) using "sir".
+#: ''"Right this way, sir." — "You don't have to '''sir''' me."''
+#: ''He '''sirred''' me! Do I really look that masculine just because I'm wearing a tie?''
 
 ===See also===
 * [[dame]]
