Converting simple translation table items to use {{t}} <North African#24172300>

--- a/en/n/North African.741821.wikitext
+++ b/en/n/North African.741821.wikitext
@@ -10,7 +10,7 @@
 * [[Ido]]: nord-Afrikana
 * Italian: {{t|it|nordafricano}}
 {{trans-mid}}
-* Polish: [[północnoafrykański]] {{m}}
+* Polish: {{t|pl|północnoafrykański|m}}
 * Romanian: {{t|ro|nord-african}}
 {{trans-bottom}}
 
