Converting simple translation table items to use {{t}} <thing#24172422>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -151,7 +151,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 * Slovak: {{t|sk|vec|f}}
 * Slovene: {{t+|sl|stvar|f}}, {{t+|sl|reč|f}}
 * Spanish: {{t+|es|cosa|f}}
-* Swahili: {{t+|sw|kitu|c7|c8}}, {{t+|sw|vitu|c8}} {{p}}
+* Swahili: {{t+|sw|kitu|c7|c8}}, {{t+|sw|vitu|c8|p}}
 * Swedish: {{t+|sv|sak|c}}, {{t+|sv|ting|n}}
 * Telugu: {{t+|te|వస్తువు|tr=vastuvu}}
 * Thai: {{t+|th|สิ่ง|tr=sìng|sc=Thai}}
