t+pt:[[CD]] ([[WT:EDIT|Assisted]]) <CD#24177692>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -63,6 +63,7 @@ Abbreviation of various terms and phrases.
 * Macedonian: {{t|mk|це-де|n|tr=ce-de}}
 * Malay: {{t|ms|CD}}
 * Persian: {{t|fa|سی‌دی|tr=sidi|sc=fa-Arab}}
+* Portuguese: {{t+|pt|CD|m}}
 * Russian: {{qualifier|indeclinable}} {{t+|ru|CD|m|tr=si-di}}, {{qualifier|indeclinable}} {{t|ru|си-ди|m|tr=si-di}}
 * {{trreq|vi}}
 {{trans-bottom}}
