--- a/en/g/graniteware.856309.wikitext
+++ b/en/g/graniteware.856309.wikitext
@@ -4,7 +4,8 @@
 {{suffix|granite|ware}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
+
 # [[ironware|Ironware]] that has been coated with a layer of [[vitreous]] [[enamel]] with a swirled or speckled pattern resembling [[granite]].
 # [[pottery|Pottery]] with the same type of enamel coating.
 
