/* Noun */ # One of the small [[roller]]s of a [[carding]] [[machine]] which work with the large [[cylinder]]. <squirrel#24233978>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -17,6 +17,7 @@ From {{etyl|fro|en}} {{term|esquirel|lang=fro}}, {{term|escurel|lang=fro}} (when
 
 # Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
 # {{context|Scientology|often|disparaging|lang=en}} A person, usually a [[freezoner]], who applies L. Ron Hubbard's technology in a [[heterodox]] manner.
+# One of the small [[roller]]s of a [[carding]] [[machine]] which work with the large [[cylinder]].
 
 ====Derived terms====
 * [[gray squirrel]]
