Converting simple translation table items to use {{t}} <bet#24253382>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -33,7 +33,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 * German: {{t+|de|Wette|f}}
 * Greek: {{t+|el|στοίχημα|n|tr=stoíchima}}
 * Greenlandic: {{t|kl|eqquiniut}}
-* Hebrew: [[התערבות]] (hitarvut) {{f}}
+* Hebrew: {{t|he|התערבות|f|tr=hitarvut}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|fogadás}}
 * Italian: {{t+|it|scommessa|f}}
@@ -47,7 +47,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 * Slovene: {{t|sl|stava|f}}
 * Spanish: {{t+|es|apuesta}}
 * Swedish: {{t+|sv|vad|n}}
-* Telugu: [[పంతం]] (pantam)
+* Telugu: {{t|te|పంతం|tr=pantam}}
 * {{trreq|tr}}
 {{trans-bottom}}
 
