Converting simple translation table items to use {{t}} <fraction#24267454>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -73,7 +73,7 @@ From {{etyl|enm|en}} {{term|fraccioun||a breaking|lang=enm}}, from {{etyl|xno|en
 * German: {{t+|de|Bruchteil|m}}
 * Irish: {{t|ga|codán|m}}
 * Italian: {{t+|it|frazione|f}}
-* Japanese: [[断片]] (dan-pen)
+* Japanese: {{t|ja|断片|tr=dan-pen}}
 * Macedonian: {{t|mk|дел|m|tr=del}}, {{t|mk|делче|n|tr=délče}}
 {{trans-mid}}
 * Norwegian: {{t|no|andel|m}}, {{t+|no|brøkdel|m}}, {{t+|no|brøk|m}}; {{t|no|fraksjon|m}}
@@ -100,7 +100,7 @@ From {{etyl|enm|en}} {{term|fraccioun||a breaking|lang=enm}}, from {{etyl|xno|en
 * Hungarian: {{t+|hu|tört}}, {{t+|hu|törtszám}}
 * Irish: {{t|ga|codán|m}}
 * Italian: {{t+|it|frazione|f}}
-* Japanese: [[分数]] (bunsū)
+* Japanese: {{t|ja|分数|tr=bunsū}}
 {{trans-mid}}
 * Macedonian: {{t|mk|дропка|f|tr=drópka}}
 * Norwegian: {{t+|no|brøk|m}}, {{t|no|fraksjon|m}}
