Converting simple translation table items to use {{t}} <multiplication#24269084>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -31,7 +31,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Greek: {{t+|el|πολλαπλασιασμός|m|tr=pollaplasiasmós}}
 * Hungarian: {{t+|hu|szorzás}}
 * Italian: {{t+|it|moltiplicazione|f}}
-* Japanese: [[掛け算]] (かけざん, kakezan), [[乗法]] (じょうほう, jōhō)
+* Japanese: {{t|ja|掛け算|tr=かけざん, kakezan}}, {{t|ja|乗法|tr=じょうほう, jōhō}}
 {{trans-mid}}
 * Malay: {{t|ms|pendaraban}}
 * Manx: {{t|gv|yl-raghey|m}}
@@ -42,7 +42,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Russian: {{t+|ru|умножение|n|tr=umnožénije}}
 * Spanish: {{t+|es|multiplicación|f}}
 * Swedish: {{t+|sv|multiplikation|c}}
-* Telugu: [[గుణకారం]] (guNakaaram)
+* Telugu: {{t|te|గుణకారం|tr=guNakaaram}}
 * Ukrainian: {{t|uk|множення|n|tr=mnóžennja|sc=Cyrl}}
 * Urdu: {{t|ur|ضرب}}
 * West Frisian: {{t|fy|fermannichfâldiging}}
